*Empty MediaWiki Message*

--- a/ཞྭ་ནག་འཆམ།.mw
+++ b/ཞྭ་ནག་འཆམ།.mw
@@ -1,4 +1,4 @@
-འབྲུག་རྒྱལ་ཁབ་ནང་ རྒྱུད་སྡེ་སོ་སོའི་ནང་ དཔའ་བོ་དཔའ་མོའི་གར་འཆམ་གྱི་རྣམ་གཞག་ལེ་ཤ་ར་ བསྟན་པའི་བདག་པོ་སངས་རྒྱས་བཅོམ་ལྡན་འདས་ཀྱིས་དངོས་སུ་སྦེ་གསུངས་ཏེ་ཡོདཔ་ལས་ འཛམ་གླིང་ནང་ཆོས་དང་འབྲེལ་བའི་གར་འཆམ་གྱི་སྲོལ་གཏོད་པ་པོ་དེ་ དང་པ་སངས་རྒྱས་བཅོམ་ལྡན་འདས་ལུ་ཐུགཔ་ཨིན་པས། དེ་ཡང་རང་གི་ལུས་ལྷ་སྐུའི་རྣམ་པ་ལུ་གྱུར་བའི་མཚན་ཉིད་ཅན་ཅིག་ལུ་སླབ་ཨིན་པས། གར་འཆམ་ཟེར་ཞུ་དགོ་མི་དེ་ཡང་ ལགཔ་ལྷའི་ཕྱག་རྒྱ་དང་མཐུན་པའི་གར་བསྒྱུར་ཏེ་ རྐངམ་ལྷའི་སྐུ་གཟུགས་ཀྱི་རྣམ་འགྱུར་དང་མཐུན་པའི་ འགྲོས་ཀྱི་འཆམ་པའི་རྒྱུ་མཚན་ལས་བརྟེན་ཏེ་ཨིན་པས། གར་འཆམ་དེ་ལུ་ཡང་ དབྱེ་བ་མ་འདྲཝ་ལེ་ཤ་ཅིག་ར་འདུག། དེ་ཡང་ དཔའ་བོའི་གར་འཆམ། ཁྲོ་བོའི་གར་འཆམ། དཔའ་མོའི་གར་འཆམ། ཁྲོ་མོའི་གར་འཆམ་ཟེར་དབྱེ་བ་སོ་སོར་ཡོདཔ་ཨིན།
+<big>འབྲུག་རྒྱལ་ཁབ་ནང་ རྒྱུད་སྡེ་སོ་སོའི་ནང་ དཔའ་བོ་དཔའ་མོའི་གར་འཆམ་གྱི་རྣམ་གཞག་ལེ་ཤ་ར་ བསྟན་པའི་བདག་པོ་སངས་རྒྱས་བཅོམ་ལྡན་འདས་ཀྱིས་དངོས་སུ་སྦེ་གསུངས་ཏེ་ཡོདཔ་ལས་ འཛམ་གླིང་ནང་ཆོས་དང་འབྲེལ་བའི་གར་འཆམ་གྱི་སྲོལ་གཏོད་པ་པོ་དེ་ དང་པ་སངས་རྒྱས་བཅོམ་ལྡན་འདས་ལུ་ཐུགཔ་ཨིན་པས། དེ་ཡང་རང་གི་ལུས་ལྷ་སྐུའི་རྣམ་པ་ལུ་གྱུར་བའི་མཚན་ཉིད་ཅན་ཅིག་ལུ་སླབ་ཨིན་པས། གར་འཆམ་ཟེར་ཞུ་དགོ་མི་དེ་ཡང་ ལགཔ་ལྷའི་ཕྱག་རྒྱ་དང་མཐུན་པའི་གར་བསྒྱུར་ཏེ་ རྐངམ་ལྷའི་སྐུ་གཟུགས་ཀྱི་རྣམ་འགྱུར་དང་མཐུན་པའི་ འགྲོས་ཀྱི་འཆམ་པའི་རྒྱུ་མཚན་ལས་བརྟེན་ཏེ་ཨིན་པས། གར་འཆམ་དེ་ལུ་ཡང་ དབྱེ་བ་མ་འདྲཝ་ལེ་ཤ་ཅིག་ར་འདུག། དེ་ཡང་ དཔའ་བོའི་གར་འཆམ། ཁྲོ་བོའི་གར་འཆམ། དཔའ་མོའི་གར་འཆམ། ཁྲོ་མོའི་གར་འཆམ་ཟེར་དབྱེ་བ་སོ་སོར་ཡོདཔ་ཨིན།</big>
 [[File:Zhana_chham.png|thumb | '''ཞྭ་ནག་འཆམ།''']]
 <big>གར་འཆམ་ཚུ་གི་གྲས་ལས་ ཞྭ་ནག་འཆམ་ཟེར་མི་འདི་ ཞྭ་ནག་ཉེར་གཅིགམ་ཟེར་ གྱངས་ཁ་དང་འཁྲིལ་ཏེ་གནང་བའི་གར་འཆམ་ཅིག་ཨིན། ཞྭ་ནག་ཟེར་ཞུ་གོ་མི་དེ་ཡང་ འཆམ་འདི་གནང་བའི་སྐབས་དབུ་ཞྭ་གནགཔོ་བཞེས་པའི་ཁར་ རྔ་ཆུང་རེ་རེ་ཕྱག་ལུ་བསྣམས་ཏེ་གནང་མི་ལུ་ཞྭ་ནག་རྔ་འཆམ་ཟེར་ཞུ་དོ་ཡོདཔ་ཨིན། ཞྭ་ནག་འཆམ་ལུ་ཡང་ཆོག་གི་ཞྭ་ནག་དང་ བྲོ་རྡུང་གི་ཞྭ་ནག་ཟེར་གཉིས་སྦེ་དབྱེ་སྟེ་ཡོདཔ་ཨིན། ཞྭ་ནག་གི་གར་འཆམ་དེ་་ ཡང་སྤྲུལ་ ༢༡ གི་དབང་དུ་བཏང་སྟེ་འཆམ་གནངམ་ཨིན། འཆམ་རྐྱབ་མི་དེ་ཚུ་ ཕྱག་གཡོན་པ་ལུ་ཤེས་རབ་མཚོན་པའི་བརྡ་ལུ་རྔ་ཆུང་དང་ ཕྱག་གཡས་པ་ལུ་ཐབས་ཀྱི་རྔསཏོག་བསྣམས་ཞིནམ་ལས་ དེ་གཉིས་ཟུང་འཇུག་གི་ཐོག་ལུ་རྡུང་བའི་སྐབས་ ཡེ་ཤེས་པའི་ཁྲོ་བོའི་ལྷ་ཚོགས་ཚུ་ག་ར་སྤྱན་དྲངས་ཏེ་ འདོད་གསོལ་ཞུ་མི་དེ་ཡང་བདག་ཅག་གི་སྟོན་པ་ རྡོ་རྗེ་གདན་བྱང་ཆུབ་ཤིང་གི་དྲུང་ལུ་ བདུད་ཀྱི་དཔུང་ཚོགས་བཏུལ་གནང་བའི་སྐབས་ སངས་རྒྱས་ཀྱིས་ མིག་གིས་མ་མཐོང་བའི་འདྲེ་སྲིན་ཚུ་བཏུལ་བའི་དུས་ལུ་བབས་ཏེ་ བརྩེ་བའི་སྒོ་ལས་འབྱོན་གནང་ཟེར་བའི་གསོལ་འདེབས་དང་བཅས་པའི་ སྐུ་འཆམ་གནང་སྟེ་དགྲ་བགེགས་ཚུ་བསྒྲལ་ཏེ་ ཞི་བདེ་ལུ་བཀོད་པའི་ལོ་རྒྱུས་ཡང་ལེ་ཤ་བཤད་དེ་ཡོད། རྒྱུད་ལས་ཡང། དེ་ཕྱིར་སྙིང་རྗེ་བསྐྱེད་པར་བྱ།། ཞེས་དང་། བསྒྲལ་བའི་ཞིང་དེའང་ཕན་བདེའི་རྒྱུར་འགྱུར་བ་སྟེ་འདི་དག་བསྒྲལ་བར་བྱས་ནས་ནི། དམྱལ་བའི་གནས་སུ་ཡུན་ཐུང་འགྱུར།། ཟེར་གསུང་དོ་བཟུམ་ བསྟན་འགྲོ་ལུ་གནོད་པའི་ཞིང་བཅུ་ཚང་བའི་དགྲ་བགེགས་ག་་ར་ཐལ་བར་བརླག་དོ་ཟེར་བའི་བརྡ་སྟོནམ་ཨིན་མས། མཁན་པོ་ཉི་མ་ཤར། (༢༠༡༨ ཤོག་གྲངས་ ༦༢)<br>
 གར་འཆམ་གནང་བའི་སྐབས་ འཆམ་པ་ཚུ་གིས་རྔ་བརྡུང་དགོ་པའི་ཚུལ་དེ་ཡང་ འདྲེ་སྲིན་གདུག་ཅན་ཚུ་ལས་རྒྱལ་ཁ་ཐོབ་པའི་རྟགས་མཚན་སྟོན་དོ་ཡོདཔ་ཨིན། ཞྭམོ་གནགཔོ་བཙུགས་དགོ་མི་དེ་ཡང་ རྒྱལ་ཁམས་ཀྱི་གནས་སྟངས་གོང་འཕེལ་གྱི་བརྡ་སྟོནམ་ཨིན། འཆམ་གོའི་མིང་ཡང་ཕོད་ཀ་ཟེར་ རྒྱུ་གྲུ་ཙི་ལས་གྲུབ་པའི་འཆམ་གོ་རིངམོ་ཅིག་ཨིན། དེ་ཡང་ཚོས་གཞི་རྣམ་པ་སྣ་ཚོགས་ཀྱིས་བཟོ་ཡོད་པའི་ཁར་ པར་རིས་ཚུ་ཡང་མཛེས་ཏོག་ཏོ་སྦེ་་རི་མོ་བཀོད་དེ་ཡོད། <br>
