/* འཚོ་བའི་གནས་སྟངས་ལས་བརྟེན་པའི་དགའ་སྐྱིད། */

--- a/རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས།.mw
+++ b/རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས།.mw
@@ -157,7 +157,7 @@
 ང་བཅས་རའི་རྒྱལ་ཁབ་འདི་ ནང་པ་ཆོས་ལྡན་གྱི་རྒྱལ་ཁབ་ཅིག་ཨིན་པའི་ཁར་ མི་དབང་རིམ་བྱོན་ཚུ་ཡང་ཆོས་རྒྱལ་བྱང་ཆུབ་སེམས་དཔའི་སྤྲུལ་པ་ཙང་ཙ་ཨིནམ་ལས་ མི་སེར་ལ་ལུ་བཟའ་འཐུང་དང་སྡོད་སའི་ཁྱིམ། བཀབ་གོ་ལ་ལ་སོགས་པའི་འཚོ་བའི་མཐུན་རྐྱེན་མ་ལངས་པར་དཀའ་སྡུག་མྱོངས་ཏེ་ཡོད་མི་ཡང་ མི་དབང་མངའ་ཞབས་ཀྱིས་རྒྱལ་ཁབ་ཀྱི་ས་གནས་ཐདམ་ཐད་ཁ་ལུ་ཞབས་ཀྱིས་བཅགས་ཏེ་ མི་སེར་དཀའ་སྡུག་མྱོངས་ཏེ་ཡོད་མི་ག་ར་ལུ་ སྐྱིད་སྡུག་གནང་སྟེ་ཡོད་པའི་ཁར་ ཨ་ལུཚུ་ཡང་སློབ་གྲྭ་ནང་བཙུགས་ནིའི་སྐྱིད་སྡུག་གནང་སྟེ་ ཕྱུགཔོ་དང་སྤྱང་ཀ་དབྱེ་བ་མེད་པར་ ཤེས་ཡོན་སྦྱང་ནིའི་གོ་སྐབས་བཟང་པོ་ཐོབ་སྟེ་ཡོདཔ་ཨིན། དེ་མ་ཚད་ མི་སེར་ཚུ་ཡང་ མི་དབང་མངའ་ཞབས་ཀྱི་ཐུགས་བརྩེ་དང་བྱམས་བརྩེ་ཆེ་བའི་བཀའ་དྲིན་ལས་ འཚོ་བའི་གནས་སྟངས་ལེགས་ཤོམ་སྦེ་སྐྱོང་དོ་ཡོདཔ་ལས་ གཞན་རྒྱལ་ཁབ་ལ་ལུ་ཅིག་ནང་བཟའ་འཐུང་མ་ལངས་པའི་དཀའ་ངལ། ལ་ལུ་ཅིག་སྡོད་སའི་ཁྱིམ་མེད་པར་ འཚོ་བའི་གནས་སྟངས་ལུ་ཐོ་ཕོག་སྟེ་ཡོདཔ་ཨིན་རུང་ འབྲུག་རྒྱལ་ཁབ་ནང་དེ་བཟུམ་མའི་དཀའ་སྡུག་མྱོང་མི་ག་ཡང་མེདཔ་ཨིན། དེ་འབདཝ་ལས་བརྟེན་ འབྲུག་པའི་མི་སེར་ཚུ་འཚོ་བའི་གནས་སྟངས་ལས་བརྟེན་པའི་ དགའ་སྐྱིད་དཔག་ཏུ་མེད་པར་མྱོངས་ཏེ་ཡོདཔ་ཨིན།<br>
 
 མདོར་བསྡུ་བ་ཅིན་ ང་བཅས་རའི་རྒྱལ་ཁབ་ཀྱི་མི་སེར་མང་ཤོས་ཅིག་ འཚོ་བ་སོ་ནམ་གྱི་ལཱ་ལུ་བརྟེན་ཏེ་སྐྱོང་དོ་ཡོདཔ་ཨིན་རུང་ གཞུང་གི་ཁ་ཐུག་ལས་ མི་སེར་ཚུ་གི་འཕྲལ་ཕུགས་གཉིས་ཀྱི་དཀའ་ངལ་སེལ་ཐབས་ལུ་ ཕྱག་ལཱ་རྩ་འགེངས་ཏེ་གནང་དང་གནང་བཞིན་ཡོད་པའི་ཁར་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་གིས་ཡང་ མི་སེར་ཚུ་དཀའ་སྡུག་ག་ཏེ་མྱོང་སར་ ཞབས་ཀྱིས་བཅགས་ཏེ་ ས་ཞིང་དང་རྒྱུ་ནོར། ཤེས་རིག་ཡོན་ཏན། ལྟོ་དང་གོ་ལ། ལ་སོགས་པའི་སྐྱིད་སྡུག་གནང་བའི་བཀའ་དྲིན་ལས་ འབྲུག་པའི་མི་སེར་ཚུ་གི་འཚོ་བའི་གནས་སྟངས་འདི་ལེགས་ཤོམ་སྦེ་ཡོདཔ་ཨིན་ནོ།</big>
-
+=== རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལྟེ་བའི་སྐོར། ===
 <big>༉   རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལྟེ་བ་འདི་ སྐྱབས་འཛིན་མི་དབང་ཨ་ཞེ་སྐལ་བཟང་ཆོས་སྒྲོན་དབང་ཕྱུག་མཆོག་གི་འོག་ལུ་ མི་སེར་གྱི་ཁེ་མིན་ལས་ཚོགསཅིག་ཨིན་མས། དེ་ཡང་ འབྲུག་གི་མི་སེར་ལས་ཚོགས་ཚོགས་པའི་དབང་འཛིན་ནང་ སྤྱི་ཟླ་ ༡༠ པའི་སྤྱི་ཚེས་ ༡༨ སྤྱི་ལོ་ ༢༠༡༢ ཀྱི་ལོ་ནང་ ཐོ་བཀོད་མཛད་གནང་ནུག། རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལྟེ་བ་དེ་ཡང་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་འཇིགས་མེད་སེང་གེ་དབང་ཕྱུག་མཆོག་གིས་ སྤྱི་ལོ་ ༡༩༧༠ གྱི་ལོ་ནང་འགོ་བཙུགས་གནང་ཡོད་མི་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་འཆར་གཞི་དང་ ནང་དོན་རིག་པ་ཚུ་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ མི་དབང་ལུ་གུས་བཏུད་བཟུམ་ཅིག་སྦེ་ གཞི་བཙུགས་མཛད་གནང་ནུག། ལྟེ་བ་དེ་གིས་ སྤྱི་སྡེའི་འགྱུར་བ་ ཡུན་བརྟན་སྦེ་མཐར་ཕྱིན་ནིའི་དོན་ལུ་ སློབ་སྦྱོང་གི་འགྱུར་བ་ལུ་ལྷན་ཐབས་འབད་དེ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་དགོངས་དོན་ ག་དེམ་ཅིག་གལ་ཆེཝ་ཨིན་ནའི་སྐོར་ལས་ ཡར་རྒྱས་གཏང་དོ་ཡོདཔ་ཨིན་མས། སྤྱིར་འཛམ་གླིང་རྒྱལ་ཁབ་ཆ་མཉམ་གྱིས་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལུ་ བརྩི་མཐོང་བསྐྱེད་ཚུགས་པའི་ཚོར་སྣང་བསྐྱེད་ནི་དང་ དགའ་སྐྱིད་ངོ་མ་འབྱུང་སའི་འཛམ་གླིང་ཅིག་བཟོ་ནི་ལུ་བརྩོན་དོ་ཡོདཔ་ཨིན་མས། དེ་འབདཝ་ལས་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལུ་ གནམ་མེད་ས་མེད་བརྩི་མཐོང་སྐྱེད་མི་ལུ་དམིགས་ཏེ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལྟེ་བ་གིས་ཡང་ ཡུན་བརྟན་གྱི་ཐབས་ཤེས་ཚུ་ འཛམ་གླིང་དང་མནོ་ཅན་མི་ཚུ་ལུ་ གཟིགས་འབུལ་ཕུལ་ནིའི་དོན་ལུ་ ལཱ་འབད་དོ་ཡོདཔ་ཨིན་མས།</big> (GNH Centre Bhutan, 2021)<br>
 <big>ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་འདི་ གོང་འཕེལ་གཏངམ་བཞིན་དུ་ཡོདཔ་དང་ དེའི་ནང་ལས་ སྤྱི་ལོ་ ༢༠༢༠ གི་ལོ་ལུ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལྟེ་བ་དང་མི་ཚུ་གི་རིག་རྩལ་ལས་རིམ་གཉིས་ མཉམ་འབྲེལ་འབད་དེ་ དགེ་ལེགས་ཕུག་ལུ་སྦེ་ ལས་རིམ་ཅིག་འགོ་འདྲེན་འཐབ་ནུག། དེ་བསྒང་ སློབ་ཕྲུག་ ༡༡༥ དང་གཅིག་ཁར་ འབྲུག་དང་རྒྱ་གར་གཉིས་ལས་ སློབ་སྟོན་པ་མ་འདྲཝ་ཚུ་ཡང་ ཞུ་ཡོདཔ་ཨིན་མས། མཉམ་འབྲེལ་གྱི་ཐོག་ལས་ ལཱ་འབད་བའི་སྐབས་ལུ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་དམིགས་དོན་གཙོ་བོ་ར་ རིག་རྩལ་དེ་ལག་ལེན་འཐབ་སྟེ་ ང་བཅས་རའི་ལམ་སྲོལ་འདི་ ག་དེམ་ཅིག་ཁག་ཆེཝ་ཨིན་ན་དང་ ལམ་སྲོལ་རྒྱུན་སྐྱོང་འབད་ནི་ལུ་བརྩོན་ཤུགས་བསྐྱེད་ཡོདཔ་ཨིན་མས། དེ་མ་ཚད་ ཞལ་འཛོམས་དེ་ལུ་བརྟེན་ཏེ་ དེ་ཁར་བཅའ་མར་གཏོགས་མི་རེ་རེ་བཞིན་དུ་གིས་ དུས་རྒྱུན་གྱི་མི་ཚེ་ནང་ལུ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་དེ་ རང་གི་རྒྱུད་ལུ་ག་དེ་སྦེ་སྐྱེ་ནི་ཨིན་ན་དང་ དགའ་བ་འདི་འཇམ་ཏོང་ཏོ་སྦེ་ ག་དེ་སྦེ་སྦྱང་ནི་ཨིན་ན་ཚུ་གི་གྲོས་འཆར་ཡང་ཕུལ་ཡོདཔ་ཨིན་མས། རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་དེ་ ཁོང་གི་དོན་ལུ་བལྟ་བའི་མིག་ཏོ་ ཁ་ཕྱེ་བའི་དངོས་པོ་བཟུམ་ཅིག་ཨིནམ་ལས་ དེ་བཟུམ་མའི་སྐོར་ལས་ཤེས་ཚུགས་པའི་གོ་སྐབས་གནང་མི་ལུ་བཀའ་དྲིན་ཚུ་ཡང་བསམས་ཡོདཔ་དང་།</big> (GNH Centre Bhutan, 2020) <big>དེ་གིས་སྦེ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་གོང་འཕེལ་གཏང་ནི་ལུ་ ཕན་པ་ཡང་སྦོམ་སྦེ་ར་བྱུང་ཡོདཔ་ཨིན་མས།</big> <br>
 <big>དེ་བཟུམ་སྦེ་ ང་བཅས་རའི་ན་གཞོན་ཚུ་གིས་ཡང་ སོ་ནམ་གྱི་ལཱ་འབད་དེ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ལུ་བརྩི་མཐོང་བསྐྱེད་དེ་ གོང་འཕེལ་གཏང་ནི་ལུ་སྦྱང་བརྩོན་འབད་དོ་ཡོདཔ་ཨིན་མས། དེ་ཡང་ ཁོང་ན་གཞོན་ ༡༡ འབད་མི་མཐོ་རིམ་སློབ་གྲྭ་ལས་མཐར་འཁྱོལ་ཏེ་ ལོ་ངོ་གཉིས་ཀྱི་རིང་ལུ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་སོ་ནམ་ཚོགས་པའི་ལས་འཆར་འགོ་དང་པ་ཐོ་བཀོད་འབད་ནུག། ལཱ་འབད་བའི་ནམ་དུས་ལུ་ སློབ་སྟོན་པ་གིས་ ཤ་མུ་གི་ལཱ་འབད་ཐངས་དང་ ཤ་མུ་ལུ་འབུཔ་ག་ཅི་གིས་ གནོདཔ་ཨིན་ནའབུཔ་ལ་སོགས་པའི་སྐོར་ལས་སྟོན་ཡོདཔ་ཨིན་མས། ལས་འཆར་ལུ་བརྟན་ཏེ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་འདི་ དངོས་སུ་སྦེ་ རང་གིས་ལག་ལེན་འཐབ་ཚུགས་དོ་ཡོདཔ་ཨིན་མས། དེ་ཡང་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་ཤེས་བྱའི་རིག་གནས་དགུ་ ལག་ལེན་འཐབ་ཐོག་ལས་ རང་གི་སེམས་དྲན་ཤེས་ཀྱི་ངང་ལུ་བཞག་ནི་ལུ་སྦྱང་བ་འབད་ནི་དང་ མི་སྡེའི་འཚོ་བ་སྐྱོང་ནི་ལུ་འགན་ཁུར་འབག་ནི། དེ་མ་ཚད་ ཁས་བླངས་ཀྱི་ལཱ་ཚུ་ ཁོང་རའི་དུས་རྒྱུན་གྱི་ལཱ་འབད་བའི་སྐབས་ལུ་ དེ་ཚུ་རང་བཞིན་གྱིས་ལག་ལེན་འཐབ་འགྱོ་དོ་ཡོདཔ་ཨིན་མས། དེ་ཚུ་ག་ར་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་སློབ་སྦྱོང་འབད་བའི་ནམ་དུས་ལུ་ ཕན་ཐབས་འབྱུང་དོ་ཡོདཔ་ཨིན་མས། ལྟེ་བ་དེ་གིས་ མ་འོངས་པའི་ན་གཞོན་ཚུ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་འགོ་ཁྲིདཔ་བཟོ་ཐབས་ལུ་ སོ་ནམ་གྱི་ལཱ་ཚུ་འབད་དེ་ རང་གི་གཟུགས་དང་ནང་གི་སེམས་སྒྲིང་སྒྲི་བཞག་ནི་ལུ་ ཡར་རྒྱས་གཏང་ནི་དང་། མི་སྡེའི་གཡུས་སྒོ་ཚུ་དང་འབྲེལ་བ་ལེགས་ཤོམ་སྦེ་བཞག་ནི་དང་ བདག་འཛིན་འཐབ་སྟེ་ཡར་རྒྱས་གཏང་ནི་ལུ་རེ་བ་སྐྱེད་དོ་ཡོདཔ་ཨིན་མས། དེ་ལུ་བརྟེན་ཏེ་ མི་སྡེ་སྒྲིང་སྒྲི་བཟོ་ནིའི་དོན་ལུ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་དང་དབུ་ཁྲིད་ཀྱི་གོ་འཕང་གཉིས་ ཟུང་འབྲེལ་སྦེ་ལག་ལེན་ཚུགས་པའི་དམིགས་པ་སྐྱེད་དོ་ཡོདཔ་མས། དེ་འབདཝ་ལས་ དེ་ཚུ་ག་ར་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་དེ་ དངོས་སུ་སྦེ་ལག་ལེན་འཐབ་ནིའི་བརྩོན་ཤུགས་ཅིག་ཨིན་མས།</big> (GNH Centre Bhutan, 2021)
