*Empty MediaWiki Message*

--- a/འབྲུག་ལག་བཟོ་ཚོགས་པ།.mw
+++ b/འབྲུག་ལག་བཟོ་ཚོགས་པ།.mw
@@ -1,7 +1,7 @@
-<big>༉ འབྲུག་ལག་བཟོ་ཚོགས་པ་འདི་ སྤྱི་ལོ་ ༢༠༠༥ གི་ལོ་ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན་མས། སྤྱི་ལོ་ ༢༠༡༡ གི་ལོ་ལུ་ ལས་ཁུངས་དེ་ འབྲུག་གི་མི་སྡེ་ལས་ཚོགས་བཅའ་ཁྲིམས་ ༢༠༠༧ ཅན་མའི་འོག་ལུ་ ཕན་ནུས་ཁྱབ་སྤེལ་འབད་ནི་དང་ འབྲུག་གི་ལག་བཟོ་ཡུན་དུ་གནས་ཏེ་བཞག་ཐབས་ལུ་ སྲོལ་བཙུགས་ལྟེ་བ་ཅིག་སྦེ་ ལུགས་མཐུན་གྱི་སྒོ་ལས་ཐོ་བཀོད་འབད་ཡོདཔ་ཨིན་མས། ད་རེས་འབདཝ་ད་ ལས་ཁུངས་དེ་གིས་ སྔར་སྲོལ་གྱི་ལག་བཟོ་ ཁྱབ་སྤེལ་གཏང་ནི་དང་ ང་བཅས་རའི་ལམ་སྲོལ་དང་མི་སྡེ་ས་ཁོངས་ཀྱི་རང་བཞིན་གནས་སྟངས་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་བཞག་ནིའི་གཞི་སྟེགས་ཅིག་སྦེ་ཕྱག་ཞུ་དོ་ཡོདཔ་ཨིན་མས། འབྲུག་ལག་བཟོ་ཚོགས་པ་འདི་ ལམ་སྲོལ་བདག་འཛིན་འབད་མི་ ཁེ་མིན་མི་སྡེ་ལས་ཚོགས་ཅིག་ཨིན་མས། ལས་ཁུངས་དེ་གིས་ ང་བཅས་རའི་རྒྱལ་ཁབ་ཀྱི་དཔལ་འབྱོར་དང་ལམ་སྲོལ། དེ་ལས་ རིག་རྩལ་ཚུ་ ཡར་དྲག་གཏང་ཐབས་ལུ་གྲོགས་རམ་འབད་ཐོག་ལས་ རྒྱལ་ཡོངས་ནང་འཁོད་ཀྱི་ཁེ་རྒུད་ཡོད་མི་ཚུ་ལུ་རྒྱབ་སྐྱོར་འབད་དེ་ རྒྱལ་ཁབ་ནང་ གཅིག་སྒྲིལ་དང་ཚོང་འབྲེལ་ལུ་ཕན་ནུས་ཅན་གྱི་ལག་བཟོའི་གཡོག་སྡེ་ཅིག་ གཞི་བཙུགས་འབད་ནིའི་དམིགས་པ་སྐྱེད་དོ་ཡོདཔ་ཨིན་མས། ངེས་པར་དུ་འགྱུར་བཅོས་འབད་དགོ་མི་ཚུ་གོང་འཕེལ་གཏང་ནི། གོ་སྐབས་ཚུ་རན་ཏོག་ཏོ་སྦེ་བྱིན་དང་ ཡང་ན་འོས་འབབ་དང་བསྟུན་གསརཔ་བཟོ་ནི། དེ་ལས་ གསར་གཏོད་སྣ་ཚོགས་ལུ་སེམས་ཤུགས་བསྐྱེད་བཅུག་ནི་ལ་སོགས་པ་ཚུ་ ལས་ཁུངས་དེ་གི་འགན་དབང་ཨིན་མས།</big> (Handicraft Association of Bhutan, n.d.)<br>
+<big>༉ འབྲུག་ལག་བཟོ་ཚོགས་པ་འདི་ སྤྱི་ལོ་ ༢༠༠༥ གི་ལོ་ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན་མས། སྤྱི་ལོ་ ༢༠༡༡ གི་ལོ་ལུ་ ལས་ཁུངས་དེ་ འབྲུག་གི་མི་སྡེ་ལས་ཚོགས་བཅའ་ཁྲིམས་ ༢༠༠༧ ཅན་མའི་འོག་ལུ་ ཕན་ནུས་ཁྱབ་སྤེལ་འབད་ནི་དང་ འབྲུག་གི་ལག་བཟོ་ཡུན་དུ་གནས་ཏེ་བཞག་ཐབས་ལུ་ སྲོལ་བཙུགས་ལྟེ་བ་ཅིག་སྦེ་ ལུགས་མཐུན་གྱི་སྒོ་ལས་ཐོ་བཀོད་འབད་ཡོདཔ་ཨིན་མས། ད་རེས་འབདཝ་ད་ ལས་ཁུངས་དེ་གིས་ སྔར་སྲོལ་གྱི་ལག་བཟོ་ ཁྱབ་སྤེལ་གཏང་ནི་དང་ ང་བཅས་རའི་ལམ་སྲོལ་དང་མི་སྡེ་ས་ཁོངས་ཀྱི་རང་བཞིན་གནས་སྟངས་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་བཞག་ནིའི་གཞི་སྟེགས་ཅིག་སྦེ་ཕྱག་ཞུ་དོ་ཡོདཔ་ཨིན་མས། འབྲུག་ལག་བཟོ་ཚོགས་པ་འདི་ ལམ་སྲོལ་བདག་འཛིན་འབད་མི་ ཁེ་མིན་མི་སྡེ་ལས་ཚོགས་ཅིག་ཨིན་མས། ལས་ཁུངས་དེ་གིས་ ང་བཅས་རའི་རྒྱལ་ཁབ་ཀྱི་དཔལ་འབྱོར་དང་ལམ་སྲོལ། དེ་ལས་ རིག་རྩལ་ཚུ་ ཡར་དྲག་གཏང་ཐབས་ལུ་གྲོགས་རམ་འབད་ཐོག་ལས་ རྒྱལ་ཡོངས་ནང་འཁོད་ཀྱི་ཁེ་རྒུད་ཡོད་མི་ཚུ་ལུ་རྒྱབ་སྐྱོར་འབད་དེ་ རྒྱལ་ཁབ་ནང་ གཅིག་སྒྲིལ་དང་ཚོང་འབྲེལ་ལུ་ཕན་ནུས་ཅན་གྱི་ལག་བཟོའི་གཡོག་སྡེ་ཅིག་ གཞི་བཙུགས་འབད་ནིའི་དམིགས་པ་སྐྱེད་དོ་ཡོདཔ་ཨིན་མས། ངེས་པར་དུ་འགྱུར་བཅོས་འབད་དགོ་མི་ཚུ་གོང་འཕེལ་གཏང་ནི། གོ་སྐབས་ཚུ་རན་ཏོག་ཏོ་སྦེ་བྱིན་དང་ ཡང་ན་འོས་འབབ་དང་བསྟུན་གསརཔ་བཟོ་ནི། དེ་ལས་ གསར་གཏོད་སྣ་ཚོགས་ལུ་སེམས་ཤུགས་བསྐྱེད་བཅུག་ནི་ལ་སོགས་པ་ཚུ་ ལས་ཁུངས་དེ་གི་འགན་དབང་ཨིན་མས།</big> [http://www.handicraftsbhutan.org/ Handicraft Association of Bhutan]<br>
 <big>ལས་ཁུངས་དེ་གི་དམིགས་ཡུལ་དང་ འགན་འཁྲི་ག་ཅི་ར་སྨོ་ཟེར་བ་ཅིན། དང་པ་ མཐའ་ཟུར་གྱི་མི་སྡེ་དང་ཨམ་སྲུ་ཚུ་ལུ་ ལག་བཟོ་རྒྱ་སྐྱེད་གཏང་ནི་དེ་ཨིན་མས། དེ་ཡང་ མཐའ་ཟུར་གྱི་མི་ཚེ་སྐྱོང་ནི་ལུ་གྲོགས་རམ་འབད་དེ་ ཡར་འཕར་གཏང་ཐབས་ལུ་ ལག་བཟོ་བཟོ་གྲྭ་ཁང་ཡར་རྒྱས་བཏང་སྟེ་ ཁེབ་ས་ཅན་ཅིག་དང་བརྩི་མཐོང་ཡོད་པའི་ལག་གཡོག་ཅིག་བཟོ་ནིའི་དོན་ལུ་ མཐུན་རྐྱེན་སྦྱར་ནི་དེ་ཨིན་མས། རྒྱལ་ཁབ་ཀྱི་ལག་བཟོ་བཟོ་གྲྭ་ཁང་ཡར་རྒྱས་གཏང་ནིའི་དོན་ལུ་ གོང་འཕེལ་གཏང་ནི་དང་སེམས་ཤུགས་བསྐྱེད་བཅུག་ནི། དེ་ལས་ གྲོགས་རམ་འབད་ནི་ལུ་ ངེས་པར་མཁོ་བའི་རིམ་པ་ཚུ་བཏོན་དོ་ཡོདཔ་ཨིན།  དེ་བཟུམ་སྦེ་ འོང་འབབ་ཡོད་པའི་ལག་བཟོ་བཟོ་གྲྭ་ཁང་གི་རིག་རྩལ་དང་ ལག་བཟོ་བཟོ་གྲྭ་ཁང་གི་འོས་འབབ་ཚུ་ ཡར་རྒྱས་གཏང་ཐབས་ལུ་ འགྲེམས་སྟོན་དང་ལག་བཟོ་ལྟདམོ་ཚུ་གི་ལས་རིམ་ཚུ་ འགོ་འདྲེན་འཐབ་ནི་དེ་ཨིན་མས། གཉིས་པ་ཟེརཝ་ད་ རིག་རྩལ་རྒྱ་སྐྱེད་གཏང་ནི་དང་ ལག་བཟོ་སློབ་སྦྱོང་འབད་ནིའི་ལྟེ་བ་གཞི་བཙུགས་འབད་ནི་དེ་ཨིན་མས། དེ་ཡང་ ང་བཅས་རའི་འབྲུག་རྒྱལ་ཁབ་ཀྱི་ཐུན་མོང་མ་ཡིན་པའི་སྔར་སྲོལ་དངསྲོལ་རྒྱུན་གྱི་ལམ་སྲོལ་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་དང་ ཡར་རྒྱས་གཏང་ཐབས་ལུ་ སྒྱུ་རྩལ་དང་ལག་བཟོ།  དེ་ལས་ དེ་དང་འདྲ་བའི་རིག་རྩལ་མ་འདྲཝ་ཚུ་ལུ་རྒྱབ་སྐྱོར་དང་གོང་འཕེལ་གཏང་ནི་དེ་ཨིན་མས། དེ་བཟུམ་སྦེ་ ལག་བཟོ་མཁསཔ་དང་ལག་བཟོ་སྡེ་ཚན་ཚུ་གི་རིག་རྩལ་རྒྱ་སྐྱེད་གཏང་ནིའི་དོན་ལུ་ ལག་བཟོ་ལུ་བརྟེན་པའི་ཚོང་ལམ་གྱི་གནས་ཚུལ་ཚུ་བཤད་ནི་དང་ ཐོན་སྐྱེད་གསརཔ་གི་གནས་སྐབས། དེ་ལས་ སྦྱོང་བརྡར་ལ་སོགས་པ་ཚུ་བྱིན་ཏེ་གྲོགས་རམ་འབད་ནི་དེ་ཨིན་མས། དེ་མ་ཚད་ ལག་བཟོ་དང་འབྲེལ་བའི་ལཱ་རིགས་ནང་ལུ་ མཆོག་གྱུར་གྱི་རྟགས་མ་བྱིན་ནི་ཡང་ འགོ་བཙུགས་ནི་ཨིན་མས། དེ་གིས་སྦེ་ ཁོང་ལཱ་འབད་མི་ཚུ་གི་རྒྱུད་ལུ་བརྩོན་ཤུགས་བསྐྱེད་དེ་ ལཱ་འབད་ནིའི་སེམས་ཤུགས་བྱིན་ཚུགས་ནི་ཨིན་མས། <br>
-གསུམ་པ་ལུ་ ལག་བཟོ་གཡོག་སྡེ་ནང་ལུ་ ལཱ་འབད་མི་ཚུ་གི་དོན་ལུ་ མཉམ་རུབ་ཀྱི་གཞི་སྟེགས་བཟོ་ནི་དེ་ཨིན་མས། དེ་ཡང་ ལག་བཟོ་ཚོང་འབྲེལ་ལུ་སྤྲོ་བ་བསྐྱེད་བཅུག་ནིའི་ཐབས་ལམ་ཡར་རྒྱས་གཏང་ནི་ལུ་ གཞུང་དང་རྒྱལ་སྤྱིའི་ལས་ཁུངས་དང་མཐུན་ཚོགས། དེ་ལས་ གཞན་ཚོང་སྡེ་ཚུ་དང་གཅིག་ཁར་བསམ་འཆར་བཤད་ནི་དང་ འབྲེལ་བ་འཐབ་སྟེ་་ལཱ་འབད་ནི་དེ་ཨིན་མས། དེ་བཟུམ་སྦེ་ བཙོང་ཚུགས་པའི་ཐོན་སྐྱེད་དང་བསྟུན་ཏེ་ འབྲེལ་མཐུན་དང་སོར་འགྱུར་ལུ་བརྟེན་ཏེ་ རྒྱལ་སྤྱི་གི་གནས་ཚད་ནང་ལུ་ ཚོང་ལམ་ཁྱབ་སྦེ་བཟོ་ནི་དེ་ཨིན་མས། བཞི་པ་ཟེརཝ་ད་ འབྲུག་པའི་ལག་བཟོ་གི་རིག་རྩལ་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་འབད་ནི་དང་ དེའི་གནད་ཁུངས་ཚུ་སྲུང་སྐྱོབ་འབད་ནི་ཚུ་ཨིན་མས། དེ་ཡང་ ཕྱི་རྒྱལ་ཁབ་ཚུ་ནང་ འབྲུག་ལག་བཟོ་ཚོགས་པ་དང་འདྲ་བའི་ལས་ཁུངས་ཚུ་དང་གཅིག་ཁར་འབྲེལ་གཏོགས་འབད་ནི་དང་ ལག་བཟོ་གཡོག་སྡེ་དེ་ ཕྱི་རྒྱལ་དང་རྒྱལ་ཁབ་ནང་འཁོད་གཉིས་ཆ་རའི་ནང་ ངོ་ཚབ་འབད་ནི་ལ་སོགས་པ་ཚུ་ ལས་ཁུངས་དེ་་གི་ལཱ་འགན་ཨིན་པའི་ཁར་ དམིགས་པ་ཡང་དེ་ར་སྐྱེད་དོ་ཡོདཔ་ཨིན་མས།</big> (Handicrafts Association of Bhutan, n.d.)<br>
-<big>འབྲུག་པའི་ན་གཞོན་དང་ མཐའ་ཟུར་གྱི་གཡུས་སྒོ་དང་ཁྲོམ་ཁར་ཡོད་མི་ལག་བཟོ་མཁསཔ་ཚུ་གི་རྒྱུད་ལུ་ ཕན་ཐོགས་ཅན་གྱི་གཡོག་སྤྲོད་ནི་དང་ ཡུན་བརྟན་འཚོ་བའི་མཐུན་རྐྱེན་བཟོ་ནིའི་དོན་ལུ་ འབྲུག་ལག་བཟོ་ཚོགས་པ་གིས་ ལག་བཟོའི་ལས་སྣ་ཚུ་ འཕར་ཚུགས་པའི་ཚོང་ལཱ་ཅིག་ལུ་ བསྒྱུར་ནི་གི་ལཱ་འབད་དོ་ཡོདཔ་ཨིན་མས། འབྲུག་ལག་བཟོ་ཚོགས་པའི་ཐོན་སྐྱེད་ཚུ་བཙོང་ས་ ཐིམ་ཕུག་དང་སྤ་རོ་གི་ཁྲོམ་ནང་ ལྟ་བཤལ་པའི་དྲག་རིམ་ཟ་ཁང་ ༡༠ དེ་ཅིག་ཡོདཔ་ཨིན། དེ་ཡང་ ལྟ་བཤལཔ་ཚུ་གི་འབྲུག་པའི་ལག་བཟོའི་ཅ་ཆས་ཚུ་བལྟ་ནི་དང་ཉོ་ནིའི་དོན་ལུ་ ལག་བཟོ་ཁྲོམ་དང་ཡིག་ཚང་གི་ས་ཁོངས་ཚུ་ནང་ རེ་རེ་ཡོདཔ་ཨིན་མས། བཙོང་སའི་ས་ཁོངས་ནང་ཡོད་པའི་བཙོང་ཆས་ཚུ་ མཐའ་ཟུར་གྱི་ལག་བཟོའི་ཐོན་སྐྱེད་དང་ ཚོང་ལམ་ལུ་ལྷོད་མ་ཚུགས་པའི་ལག་ཤེསཔ་ཚུ་གི་ཅ་ལ་ཚུ་ཨིན་མས། རྒྱལ་ཁབ་ནང་གི་ལག་བཟོ་དང་ལག་ཤེསཔ་མང་ཤོས་ཅིག་ གོ་སྐབས་ཉུང་བའི་སྡེ་ཚན་ནང་ལས་ཨིནམ་ལས་ དེ་གིས་ ཁོང་གི་དོན་ལུ་ དཔལ་འབྱོར་འདྲ་མཉམ་སྦེ་ཡར་རྒྱས་གཏང་ཐབས་ལུ་ ངེས་པར་མཁོ་བའི་ཐབས་ལམ་ཅིག་ཨིན་མས།</big> (Handicrats Associaton of Bhutan, n.d.) 
+གསུམ་པ་ལུ་ ལག་བཟོ་གཡོག་སྡེ་ནང་ལུ་ ལཱ་འབད་མི་ཚུ་གི་དོན་ལུ་ མཉམ་རུབ་ཀྱི་གཞི་སྟེགས་བཟོ་ནི་དེ་ཨིན་མས། དེ་ཡང་ ལག་བཟོ་ཚོང་འབྲེལ་ལུ་སྤྲོ་བ་བསྐྱེད་བཅུག་ནིའི་ཐབས་ལམ་ཡར་རྒྱས་གཏང་ནི་ལུ་ གཞུང་དང་རྒྱལ་སྤྱིའི་ལས་ཁུངས་དང་མཐུན་ཚོགས། དེ་ལས་ གཞན་ཚོང་སྡེ་ཚུ་དང་གཅིག་ཁར་བསམ་འཆར་བཤད་ནི་དང་ འབྲེལ་བ་འཐབ་སྟེ་་ལཱ་འབད་ནི་དེ་ཨིན་མས། དེ་བཟུམ་སྦེ་ བཙོང་ཚུགས་པའི་ཐོན་སྐྱེད་དང་བསྟུན་ཏེ་ འབྲེལ་མཐུན་དང་སོར་འགྱུར་ལུ་བརྟེན་ཏེ་ རྒྱལ་སྤྱི་གི་གནས་ཚད་ནང་ལུ་ ཚོང་ལམ་ཁྱབ་སྦེ་བཟོ་ནི་དེ་ཨིན་མས། བཞི་པ་ཟེརཝ་ད་ འབྲུག་པའི་ལག་བཟོ་གི་རིག་རྩལ་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་འབད་ནི་དང་ དེའི་གནད་ཁུངས་ཚུ་སྲུང་སྐྱོབ་འབད་ནི་ཚུ་ཨིན་མས། དེ་ཡང་ ཕྱི་རྒྱལ་ཁབ་ཚུ་ནང་ འབྲུག་ལག་བཟོ་ཚོགས་པ་དང་འདྲ་བའི་ལས་ཁུངས་ཚུ་དང་གཅིག་ཁར་འབྲེལ་གཏོགས་འབད་ནི་དང་ ལག་བཟོ་གཡོག་སྡེ་དེ་ ཕྱི་རྒྱལ་དང་རྒྱལ་ཁབ་ནང་འཁོད་གཉིས་ཆ་རའི་ནང་ ངོ་ཚབ་འབད་ནི་ལ་སོགས་པ་ཚུ་ ལས་ཁུངས་དེ་་གི་ལཱ་འགན་ཨིན་པའི་ཁར་ དམིགས་པ་ཡང་དེ་ར་སྐྱེད་དོ་ཡོདཔ་ཨིན་མས།</big> [http://www.handicraftsbhutan.org/ Handicraft Association of Bhutan]<br>
+<big>འབྲུག་པའི་ན་གཞོན་དང་ མཐའ་ཟུར་གྱི་གཡུས་སྒོ་དང་ཁྲོམ་ཁར་ཡོད་མི་ལག་བཟོ་མཁསཔ་ཚུ་གི་རྒྱུད་ལུ་ ཕན་ཐོགས་ཅན་གྱི་གཡོག་སྤྲོད་ནི་དང་ ཡུན་བརྟན་འཚོ་བའི་མཐུན་རྐྱེན་བཟོ་ནིའི་དོན་ལུ་ འབྲུག་ལག་བཟོ་ཚོགས་པ་གིས་ ལག་བཟོའི་ལས་སྣ་ཚུ་ འཕར་ཚུགས་པའི་ཚོང་ལཱ་ཅིག་ལུ་ བསྒྱུར་ནི་གི་ལཱ་འབད་དོ་ཡོདཔ་ཨིན་མས། འབྲུག་ལག་བཟོ་ཚོགས་པའི་ཐོན་སྐྱེད་ཚུ་བཙོང་ས་ ཐིམ་ཕུག་དང་སྤ་རོ་གི་ཁྲོམ་ནང་ ལྟ་བཤལ་པའི་དྲག་རིམ་ཟ་ཁང་ ༡༠ དེ་ཅིག་ཡོདཔ་ཨིན། དེ་ཡང་ ལྟ་བཤལཔ་ཚུ་གི་འབྲུག་པའི་ལག་བཟོའི་ཅ་ཆས་ཚུ་བལྟ་ནི་དང་ཉོ་ནིའི་དོན་ལུ་ ལག་བཟོ་ཁྲོམ་དང་ཡིག་ཚང་གི་ས་ཁོངས་ཚུ་ནང་ རེ་རེ་ཡོདཔ་ཨིན་མས། བཙོང་སའི་ས་ཁོངས་ནང་ཡོད་པའི་བཙོང་ཆས་ཚུ་ མཐའ་ཟུར་གྱི་ལག་བཟོའི་ཐོན་སྐྱེད་དང་ ཚོང་ལམ་ལུ་ལྷོད་མ་ཚུགས་པའི་ལག་ཤེསཔ་ཚུ་གི་ཅ་ལ་ཚུ་ཨིན་མས། རྒྱལ་ཁབ་ནང་གི་ལག་བཟོ་དང་ལག་ཤེསཔ་མང་ཤོས་ཅིག་ གོ་སྐབས་ཉུང་བའི་སྡེ་ཚན་ནང་ལས་ཨིནམ་ལས་ དེ་གིས་ ཁོང་གི་དོན་ལུ་ དཔལ་འབྱོར་འདྲ་མཉམ་སྦེ་ཡར་རྒྱས་གཏང་ཐབས་ལུ་ ངེས་པར་མཁོ་བའི་ཐབས་ལམ་ཅིག་ཨིན་མས།</big> [http://www.handicraftsbhutan.org/ Handicraft Association of Bhutan]
 
 === ཁུངས་གཏུག། ===
 # Handicraft Association of Bhutan. (n.d.). About Us- HAB. Retrieved from About us and Our Values: http://www.handicraftsbhutan.org
