*Empty MediaWiki Message*

--- a/འབྲུག་ཟ་ཁང་མཐུན་ཚོགས།.mw
+++ b/འབྲུག་ཟ་ཁང་མཐུན་ཚོགས།.mw
@@ -1,4 +1,11 @@
-<big>༉   འབྲུག་ཟ་ཁང་མཐུན་ཚོགས་འདི་ རྒྱལ་ཁབ་ཀྱི་ས་གནས་ག་ར་གི་ཟ་ཁང་སྤྱི་མཐུན་ཚོགས་པ་ཅིག་ཨིན་མས། ལས་ཁུངས་དེ་ནང་གི་འཐུས་མིའི་ཚད་ཡང་ བཟའ་ཚང་ཆུང་ཀུ་གིས་འཛིན་སྐྱོང་འཐབ་མིའི་ཟ་ཁང་ལས་འགོ་བཟུང་ ཟ་ཁང་སྦོམ་ཚུན་ཚོད་ཨིན་མས། མཐུན་ཚོགས་དེ་ སྤྲོ་བ་ཅན་གྱི་ཟ་ཁང་འཆང་མི་སྡེ་ཚན་ཅིག་གིས་ ཁེ་མིན་དང་སྲིད་དོན་འབྲེལ་མེད། དེ་ལས་ ཕན་ཚུན་ཕན་ཐོགས་པའི་ལས་ཚོགས་ཅིག་སྦེ་  སྤྱི་ལོ་ ༢༠༠༧ སྤྱི་ཟླ་ ༩ པའི་ནང་ གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན་མས། རྒྱལ་ཁབ་ནང་གི་ལྟ་བཤལ་པའི་སྡོད་གནས་དང་ཟ་ཁང་ཚུ་ག་ར་ གཅིག་སྦེ་གནས་ཐབས་དང་ ལྟ་བཤལ་གྱི་ཚོང་ལཱ་འདི་ ཡུན་བརྟན་སྦེ་ཡར་རྒྱས་གཏང་ཐབས་ལུ་ བརྩོན་ཤུགས་སྐྱེདཔ་ཨིན།</big>  (Hotel and Restaurant Association of Bhutan, n.d.) <big>མཐུན་ཚོགས་དེ་ནང་གི་འཐུས་མི་ཚུ་ལུ་ ཁེ་ཕན་ག་ཅི་ར་ཡོདཔ་སྨོ་ཟེར་བ་ཅིན། གཞུང་དང་ཁེ་རྒུད་ཡོད་མི་གཞན་ཚུ་དང་གཅིག་ཁར་ གྲོས་ཐག་གཅད་ནིའི་བྱ་རིམ་གྱི་ཞལ་འཛོམས་འཚོག་པའི་སྐབས་ལུ་ མགྲོན་བརྡ་འབད་ནི་དང་། དེ་བཟུམ་སྦེ་ གཞན་ཞལ་འཛོམས་དང་གྲོས་ཚོགས། དེ་ལས་ གཅིག་འབྲེལ་གྱི་ཚོགས་སྟོན་ལས་རིམ་ཚུ་ནང་ཡང་ མགྲོན་བརྡ་འབད་དོ་ཡོདཔ་ཨིན་མས། དེ་ལས་ མཐུན་ཚོགས་དེ་གི་འཐུས་མི་ཚུ་ལུ་ སྐབས་ཐོབ་ཀྱི་སྲིད་བྱུས་དང་བཅའ་ཡིག་དང་སྒྲིག་གཞི་གི་སྐོར་ལས་ དུས་མཐུན་གྱི་གོ་བརྡ་སྤེལ་དོ་ཡོདཔ་ཨིན་མས།</big> (Hotel and Restaurant Association of Bhutan, 2007)<br>
-<big>འབྲུག་ཟ་ཁང་མཐུན་ཚོགས་ཀྱི་བཟོ་གྲྭ་འདི་ ཡར་རྒྱས་གཏང་ནིའི་ནང་ འཐུས་མི་ཚུ་ངེས་པར་དུ་སྡོད་ཚུགས་པའི་གཞི་སྟེགས་ཀྱི་ཞབས་ཏོག་བྱིན་དོ་ཡོདཔ་དང་ ལས་ཁུངས་དེ་གིས་ རྒྱལ་ཁབ་ནང་གི་ལྟ་བཤལ་ཚོང་ལཱ་ལུ་གྲོགས་རམ་འབད་དེ་ ཟ་ཁང་ཚོང་ལཱ་གི་བརྩི་མཐོང་ཡང་སྲུང་དོ་ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ནང་ལུ་ ལྟ་བཤལ་ཚོང་ལཱ་དེ་ ཡུན་བརྟན་གོང་འཕེལ་གཏང་ནིའི་ནང་ གྲོགས་རམ་འབད་ནི་དང་ ཟ་ཁང་གི་གནས་ཚད་ཡར་སྐྱེད་གཏང་ནི་ལུ་དམིགས་པ་སྐྱེད་དོ་ཡོདཔ་ཨིན། འཐུས་མི་ཚུ་གི་སྤྲོ་བ་དང་ དཔལ་འབྱོར་རྒྱུན་སྐྱོང་འབད་ནི། དེ་ལས་ ཁྱད་རིག་གི་ལཱ་ ཡར་རྒྱས་གཏང་ནི་ལུ་ ངོ་ཚབ་འབད་ནི་ལུ་ཡང་ དམིགས་པ་སྐྱེདཔ་ཨིན། དེ་བཟུམ་སྦེ་ ཚོང་ལཱ་དེ་གི་ཁེ་ཕན་བསྲུང་ནི་དང་ གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ ལས་ཁུངས་དེ་གིས་བསམ་ལེན་དང་འཁྲིལ་ལཱ་འབད་ནིའི་འཆར་གཞི་ཡོདཔ་ཨིན་མས།</big> (Hotel And Restaurant Association of Bhutan, 2007) <br>
-<big>ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ལུ་ ལོ་ཨ་རྟག་ར་མགྲོན་སྐྱོང་འགྲེམས་སྟོན་འགོ་འདྲེན་འཐབ་དོ་ཡོདཔ་ཨིན། འགྲེམས་སྟོན་དེ་ཡང་གཙོ་བོ་ར་ ཚོང་ལཱ་ལྟ་སྐོརཔ་ཚུ་ལུ་དམིགས་ཏེ་འབད་དོ་ཡོདཔ་དང་། ཐེངས་ ༥ པའི་མགྲོན་སྐྱོང་འགྲེམས་སྟོན་དེ་ཡང་ ༢༠༡༩ སྤྱི་ཟླ་ ༨ པའི་སྤྱི་ཚེས་ ༢༣ ལས ༢༥ ཚུན་ ཉིནམ་གསུམ་གྱི་རིང་ལུ་ ཐིམ་ཕུག་ལྕང་གླིང་མའི་ཐང་ སྣུམ་འཁོར་བཞག་ས་ལུསྦེ་འབད་ཡོདཔ་ཨིན། དེ་བསྒང་ མགྲོན་སྐྱོང་ངོ་ཚབ་འཐུས་མི་ལྟ་སྐོརཔ་ ༢༥༠ དེ་ཅིག་འོངས་ཡོདཔ་དང་ མི་མང་ལྟ་སྐོརཔ་སྟོང་ཕྲག་ལས་ལྷག་སྟེ་འོངས་ཡོདཔ་ཨིན། དེ་བཟུམ་སྦེ་ ཐེངས་ ༦ པའི་མགྲོན་སྐྱོང་འགྲེམས་སྟོན་དེ་ཡང་ ཧེ་མ་ཐེངས་ལྔ་པའི་འགྲེམས་སྟོན་འབད་སའི་ས་ཁོངས་ནང་ལུ་སྦེ་ སྤྱི་ལོ་ ༢༠༢༠ གི་ལོ་ལུ་འབད་ཡོདཔ་ཨིན། དེ་བཟུམ་མའི་འགྲེམས་སྟོན་འགོ་འདྲེན་འཐབ་དགོ་པའི་དམིགས་དོན་དེ་ཡང་ མགྲོན་སྐྱོང་ཚོང་ལས་དང་ཁྱད་རིག་གི་ལཱ། དེ་ལས་ ལཱ་འབད་མི་དང་མཁོ་ཆས་སྤྲོད་མི་ སྤྱིར་བཏང་སྤྱོད་མི་ཚུ་གི་དོན་ལུ་གཞི་སྟེགས་བཟོ་ནི་དེ་ཨིན། དེ་དང་གཅིག་ཁར་ འགྲེམས་སྟོན་འདི་གི་མགྲོན་སྐྱོང་ཞབས་ཏོག་བྱིན་མི་ལུ་ ད་རེས་ནངས་པ་ གསརཔ་འཐོན་མི་དང་ནུས་ཤུགས་ཅན་གྱི་ཐོན་སྐྱེད་ཚུ་ ཚོང་ལམ་ནང་ལུ་འགྲེམས་སྟོན་འབད་ནིའི་དོན་ལུ་ གཞན་དང་མ་འདྲ་བའི་གོ་སྐབས་བཟང་པོ་ཅིག་ཡང་བྱིནམ་ཨིན། དེ་མ་ཚད་ ང་བཅས་རའི་ས་ཁོངས་ཀྱི་ཚོང་སྡེ་དེ་ རྒྱལ་སྤྱིའི་ཚོང་སྡེ་དང་གཅིག་ཁར་ ཚོང་འབྲེལ་གྱི་མཐུན་འབྲེལ་བཞག་ཐབས་ལུ་ གཅིག་གིས་གཅིག་ལུ་གོ་སྐབས་བྱིན་དོ་ཡོདཔ་ཨིན།</big> (Hotel and Restaurant Association of Bhutan, 2020)<br>
-<big>ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ འབྲུག་ཟ་ཁང་མཐུན་ཚོགས་གི་འོག་ལུ་ སྐར་རྟགས་ཅན་གྱི་ཟ་ཁང་ ཐོ་བཀོད་འབད་དེ་ཡོད་པའི་འཐུས་མིའི་གྱངས་ཁ་ཚུ་ཡང། སྐར་རྟགས་ཅན་གྱི་ཟ་ཁང་མེན་མི་ཡོངས་བསྡོམས་ ༨༢ དང་། སྐར་རྟགས་གསུམ་ཡོད་མི་ཟ་ཁང་ ༧༨ ། སྐར་རྟགས་བཞི་ཡོད་མི་ཟ་ཁང་ ༧ ། དེ་ལས་ སྐར་རྟགས་ལྔ་ཡོད་མི་ཟ་ཁང་ ༦ ཡོདཔ་ཨིན།</big> (HARB, n.d.)
+<big>༉   འབྲུག་ཟ་ཁང་མཐུན་ཚོགས་འདི་ རྒྱལ་ཁབ་ཀྱི་ས་གནས་ག་ར་གི་ཟ་ཁང་སྤྱི་མཐུན་ཚོགས་པ་ཅིག་ཨིན་མས། ལས་ཁུངས་དེ་ནང་གི་འཐུས་མིའི་ཚད་ཡང་ བཟའ་ཚང་ཆུང་ཀུ་གིས་འཛིན་སྐྱོང་འཐབ་མིའི་ཟ་ཁང་ལས་འགོ་བཟུང་ ཟ་ཁང་སྦོམ་ཚུན་ཚོད་ཨིན་མས། མཐུན་ཚོགས་དེ་ སྤྲོ་བ་ཅན་གྱི་ཟ་ཁང་འཆང་མི་སྡེ་ཚན་ཅིག་གིས་ ཁེ་མིན་དང་སྲིད་དོན་འབྲེལ་མེད། དེ་ལས་ ཕན་ཚུན་ཕན་ཐོགས་པའི་ལས་ཚོགས་ཅིག་སྦེ་  སྤྱི་ལོ་ ༢༠༠༧ སྤྱི་ཟླ་ ༩ པའི་ནང་ གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན་མས། རྒྱལ་ཁབ་ནང་གི་ལྟ་བཤལ་པའི་སྡོད་གནས་དང་ཟ་ཁང་ཚུ་ག་ར་ གཅིག་སྦེ་གནས་ཐབས་དང་ ལྟ་བཤལ་གྱི་ཚོང་ལཱ་འདི་ ཡུན་བརྟན་སྦེ་ཡར་རྒྱས་གཏང་ཐབས་ལུ་ བརྩོན་ཤུགས་སྐྱེདཔ་ཨིན།</big>  [http://www.hab.org.bt/ Hotel and Restaurant Association of Bhutan] <big>མཐུན་ཚོགས་དེ་ནང་གི་འཐུས་མི་ཚུ་ལུ་ ཁེ་ཕན་ག་ཅི་ར་ཡོདཔ་སྨོ་ཟེར་བ་ཅིན། གཞུང་དང་ཁེ་རྒུད་ཡོད་མི་གཞན་ཚུ་དང་གཅིག་ཁར་ གྲོས་ཐག་གཅད་ནིའི་བྱ་རིམ་གྱི་ཞལ་འཛོམས་འཚོག་པའི་སྐབས་ལུ་ མགྲོན་བརྡ་འབད་ནི་དང་། དེ་བཟུམ་སྦེ་ གཞན་ཞལ་འཛོམས་དང་གྲོས་ཚོགས། དེ་ལས་ གཅིག་འབྲེལ་གྱི་ཚོགས་སྟོན་ལས་རིམ་ཚུ་ནང་ཡང་ མགྲོན་བརྡ་འབད་དོ་ཡོདཔ་ཨིན་མས། དེ་ལས་ མཐུན་ཚོགས་དེ་གི་འཐུས་མི་ཚུ་ལུ་ སྐབས་ཐོབ་ཀྱི་སྲིད་བྱུས་དང་བཅའ་ཡིག་དང་སྒྲིག་གཞི་གི་སྐོར་ལས་ དུས་མཐུན་གྱི་གོ་བརྡ་སྤེལ་དོ་ཡོདཔ་ཨིན་མས།</big> [http://www.hab.org.bt/ Hotel and Restaurant Association of Bhutan]<br>
+<big>འབྲུག་ཟ་ཁང་མཐུན་ཚོགས་ཀྱི་བཟོ་གྲྭ་འདི་ ཡར་རྒྱས་གཏང་ནིའི་ནང་ འཐུས་མི་ཚུ་ངེས་པར་དུ་སྡོད་ཚུགས་པའི་གཞི་སྟེགས་ཀྱི་ཞབས་ཏོག་བྱིན་དོ་ཡོདཔ་དང་ ལས་ཁུངས་དེ་གིས་ རྒྱལ་ཁབ་ནང་གི་ལྟ་བཤལ་ཚོང་ལཱ་ལུ་གྲོགས་རམ་འབད་དེ་ ཟ་ཁང་ཚོང་ལཱ་གི་བརྩི་མཐོང་ཡང་སྲུང་དོ་ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ནང་ལུ་ ལྟ་བཤལ་ཚོང་ལཱ་དེ་ ཡུན་བརྟན་གོང་འཕེལ་གཏང་ནིའི་ནང་ གྲོགས་རམ་འབད་ནི་དང་ ཟ་ཁང་གི་གནས་ཚད་ཡར་སྐྱེད་གཏང་ནི་ལུ་དམིགས་པ་སྐྱེད་དོ་ཡོདཔ་ཨིན། འཐུས་མི་ཚུ་གི་སྤྲོ་བ་དང་ དཔལ་འབྱོར་རྒྱུན་སྐྱོང་འབད་ནི། དེ་ལས་ ཁྱད་རིག་གི་ལཱ་ ཡར་རྒྱས་གཏང་ནི་ལུ་ ངོ་ཚབ་འབད་ནི་ལུ་ཡང་ དམིགས་པ་སྐྱེདཔ་ཨིན། དེ་བཟུམ་སྦེ་ ཚོང་ལཱ་དེ་གི་ཁེ་ཕན་བསྲུང་ནི་དང་ གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ ལས་ཁུངས་དེ་གིས་བསམ་ལེན་དང་འཁྲིལ་ལཱ་འབད་ནིའི་འཆར་གཞི་ཡོདཔ་ཨིན་མས།</big> [http://www.hab.org.bt/ Hotel and Restaurant Association of Bhutan] <br>
+<big>ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ལུ་ ལོ་ཨ་རྟག་ར་མགྲོན་སྐྱོང་འགྲེམས་སྟོན་འགོ་འདྲེན་འཐབ་དོ་ཡོདཔ་ཨིན། འགྲེམས་སྟོན་དེ་ཡང་གཙོ་བོ་ར་ ཚོང་ལཱ་ལྟ་སྐོརཔ་ཚུ་ལུ་དམིགས་ཏེ་འབད་དོ་ཡོདཔ་དང་། ཐེངས་ ༥ པའི་མགྲོན་སྐྱོང་འགྲེམས་སྟོན་དེ་ཡང་ ༢༠༡༩ སྤྱི་ཟླ་ ༨ པའི་སྤྱི་ཚེས་ ༢༣ ལས ༢༥ ཚུན་ ཉིནམ་གསུམ་གྱི་རིང་ལུ་ ཐིམ་ཕུག་ལྕང་གླིང་མའི་ཐང་ སྣུམ་འཁོར་བཞག་ས་ལུསྦེ་འབད་ཡོདཔ་ཨིན། དེ་བསྒང་ མགྲོན་སྐྱོང་ངོ་ཚབ་འཐུས་མི་ལྟ་སྐོརཔ་ ༢༥༠ དེ་ཅིག་འོངས་ཡོདཔ་དང་ མི་མང་ལྟ་སྐོརཔ་སྟོང་ཕྲག་ལས་ལྷག་སྟེ་འོངས་ཡོདཔ་ཨིན། དེ་བཟུམ་སྦེ་ ཐེངས་ ༦ པའི་མགྲོན་སྐྱོང་འགྲེམས་སྟོན་དེ་ཡང་ ཧེ་མ་ཐེངས་ལྔ་པའི་འགྲེམས་སྟོན་འབད་སའི་ས་ཁོངས་ནང་ལུ་སྦེ་ སྤྱི་ལོ་ ༢༠༢༠ གི་ལོ་ལུ་འབད་ཡོདཔ་ཨིན། དེ་བཟུམ་མའི་འགྲེམས་སྟོན་འགོ་འདྲེན་འཐབ་དགོ་པའི་དམིགས་དོན་དེ་ཡང་ མགྲོན་སྐྱོང་ཚོང་ལས་དང་ཁྱད་རིག་གི་ལཱ། དེ་ལས་ ལཱ་འབད་མི་དང་མཁོ་ཆས་སྤྲོད་མི་ སྤྱིར་བཏང་སྤྱོད་མི་ཚུ་གི་དོན་ལུ་གཞི་སྟེགས་བཟོ་ནི་དེ་ཨིན། དེ་དང་གཅིག་ཁར་ འགྲེམས་སྟོན་འདི་གི་མགྲོན་སྐྱོང་ཞབས་ཏོག་བྱིན་མི་ལུ་ ད་རེས་ནངས་པ་ གསརཔ་འཐོན་མི་དང་ནུས་ཤུགས་ཅན་གྱི་ཐོན་སྐྱེད་ཚུ་ ཚོང་ལམ་ནང་ལུ་འགྲེམས་སྟོན་འབད་ནིའི་དོན་ལུ་ གཞན་དང་མ་འདྲ་བའི་གོ་སྐབས་བཟང་པོ་ཅིག་ཡང་བྱིནམ་ཨིན། དེ་མ་ཚད་ ང་བཅས་རའི་ས་ཁོངས་ཀྱི་ཚོང་སྡེ་དེ་ རྒྱལ་སྤྱིའི་ཚོང་སྡེ་དང་གཅིག་ཁར་ ཚོང་འབྲེལ་གྱི་མཐུན་འབྲེལ་བཞག་ཐབས་ལུ་ གཅིག་གིས་གཅིག་ལུ་གོ་སྐབས་བྱིན་དོ་ཡོདཔ་ཨིན།</big> [http://www.hab.org.bt/ Hotel and Restaurant Association of Bhutan]<br>
+<big>ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ འབྲུག་ཟ་ཁང་མཐུན་ཚོགས་གི་འོག་ལུ་ སྐར་རྟགས་ཅན་གྱི་ཟ་ཁང་ ཐོ་བཀོད་འབད་དེ་ཡོད་པའི་འཐུས་མིའི་གྱངས་ཁ་ཚུ་ཡང། སྐར་རྟགས་ཅན་གྱི་ཟ་ཁང་མེན་མི་ཡོངས་བསྡོམས་ ༨༢ དང་། སྐར་རྟགས་གསུམ་ཡོད་མི་ཟ་ཁང་ ༧༨ ། སྐར་རྟགས་བཞི་ཡོད་མི་ཟ་ཁང་ ༧ ། དེ་ལས་ སྐར་རྟགས་ལྔ་ཡོད་མི་ཟ་ཁང་ ༦ ཡོདཔ་ཨིན།</big> [http://www.hab.org.bt/ HARB]
+
+=== ཁུངས་གཏུག། ===
+# HARB. (n.d.). Members. Retrieved from Registered Members: http://www.hab.org.bt
+# Hotel and Restaurant Association of Bhutan. (2007). About Us - HRAB. Retrieved from Members Benefits: http://www.hab.org.bt
+# Hotel and Restaurant Association of Bhutan. (n.d.). About Us. Retrieved from About HRAB: http://www.hab.org.bt
+# Hotel And Restaurent Association of Bhutan. (2007). About Us - HRAB. Retrieved from Vision and Mission: http://www.hab.org.bt
+# Hotel and Restaurent Association of Bhutan. (2020). About HARB. Retrieved from Hospitality Expo: http://www.hab.org.bt
