*Empty MediaWiki Message*

--- a/ཏཱ་ར་ཡ་ན་གཞི་ཚོགས།.mw
+++ b/ཏཱ་ར་ཡ་ན་གཞི་ཚོགས།.mw
@@ -1,5 +1,5 @@
 <big>༉ ཏཱ་ར་ཡ་ན་གཞི་ཚོགས་འདི་ རྒྱལ་ཡུམ་ཨ་ཞེ་རྡོ་རྗེ་དབང་མོ་དབང་ཕྱུག་མཆོག་གིས་གཞི་བཙུགས་མཛད་གནང་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༢༠༠༣ སྤྱི་ཟླ་ ༥ པའི་སྤྱི་ཚེས་ ༤ ལུ་ འབྲུག་བརྒྱུད་འཛིན་གྱི་རྒྱལ་སྲས་མི་དབང་འཇིགས་མེད་གེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་མཆོག་གིས་ ལུགས་མཐུན་གྱི་སྒོ་ལས་གསར་གཏོད་མཛད་གནང་ཡོདཔ་ཨིན་མས། ཏཱ་ར་ཡ་ན་གཞི་ཚོགས་འདི་ མི་མང་ལུ་ཕན་ཐོགས་ཆེ་བའི་ལས་ཁུངས་ཅིག་ཨིནམ་དང་ འབྲུག་གི་མི་སྡེའི་ལས་ཚོགས་ཀྱི་བཅའ་ཁྲིམས་ནང་ལུ་ཡང་ཐོ་བཀོད་འབད་དེ་ཡོདཔ་ཨིན་མས། ཏཱ་ར་ཡ་ན་གཞི་ཚོགས་འདི་ བཀོད་ཚོགས་མདོ་ཆེན་དང་འཛིན་སྐྱོང་ཚོགས་ཆུང་གིས་སྦེ་རྒྱབ་སྐྱོར་བྱིན་ཡོདཔ་ཨིན་མས། དེ་ཡང་ བཀོད་ཚོགས་ཀྱི་སྲིད་བྱུས་ཀྱི་གནས་རིམ་ཚུ་ལུ་ལམ་སྟོན་སྤྱི་བསྡོམས་སྦེ་བྱིན་དོ་ཡོདཔ་དང་ འཛིན་སྐྱོང་ཚོགས་ཆུང་གིས་ བཀོད་ཚོགས་ཀྱིས་བཀའ་གྲོལ་གནང་བའི་ལས་སྣ་ཚུ་ལག་ལེན་འཐབ་ནིའི་ནང་ དྲུང་ཆེན་ཡིག་ཚང་ལུ་རྒྱབ་སྐྱོར་བྱིན་དོ་ཡོདཔ་ཨིན་མས། དེ་དང་གཅིག་ཁར་ ལས་རིམ་སྣ་འཛོམས་དང་ས་གོ་དཔོན་དང་གཅིག་ཁར་ལས་རིམ་ཚུ་ འཛིན་སྐྱོང་འཐབ་ནི་དང་ལག་ལེན་འཐབ་ནི་ཚུ་ག་ར་ དྲུང་ཆེན་ཡིག་ཚང་གིས་མཛད་དོ་ཡོདཔ་ཨིན་མས། ༼ཏཱ་ར་ཡ་ན་གཞི་ཚོགས།༽ 
-ལས་ཁུངས་འདི་གི་བར་ཞུགས་དེ་ཡང་ གལ་ཆེ་བའི་གཞི་དོན་བཞི་གི་ནང་ལུ་དབྱེ་སྟེ་ཡོདཔ་ཨིན་མས། དེ་ཡང་ དང་པ་ རང་ཉིད་རོགས་རམ་སྡེ་ཚན་ལས་བརྟེན་ཏེ་ ལྕོགས་གྲུབ་སྒྲིང་སྒྲི་བཟོ་ནི་དང་གོ་རྟོགས་ཡར་འཕར་བཏང་སྟེ་མི་སྡེ་མཁོ་སྒྲུབ་འབད་ནི་དང་ མི་སྡེ་དང་སློབ་གྲྭ་ནང་ལུ་ཁས་བླངས་འབད་མི་ཡར་སེང་རྐྱབ་ནི་ཨིནམ་དང་། གཉིས་པ་ སྡོད་ཁྱིམ་ལེགས་བཅོས་འབད་ནིའི་ཞབས་ཏོག་ཕུལ་ནི། གཟུགས་ཁམས་ལུ་མཐུན་རྐྱེན་སྦྱར་ནི་དང་། གཞི་རྟེན་གྱི་ཆུ་དང་གཙང་སྦྲའི་མཁོ་ཆས་ཀྱི་ཞབས་ཏོག་ལས་རྟེན་ཏེ་གཞི་རྟེན་གྱི་དགོས་མཁོ་ཅན་ཚུ་རྒྱ་སྐྱེད་གཏང་ནི་ཚུཨིན་མས། གསུམ་པ་ འོས་འབབ་ཡོད་པའི་སློབ་ཕྲུག་ལྷག་པར་དུ་སློབ་ཕྲུག་བུམོ་ཚུ་ ཡོན་ཏན་ལྷབ་སྦྱང་འབད་ནི་ལུ་གྲོགས་རམ་འབད་ནི་དང་གོ་སྐབས་ཡར་རྒྱས་གཏང་ནི་ཚུ་ཨིན་མས། དེ་ལས་ བཞི་པ་ལུ་ འོང་འབབ་བཟོ་བའི་ལཱ་དང་ཚོང་ལཱ་ཆུང་ཀུ་གཞི་བཙུགས་འབད་ཐབས་ལུ་སྐྱིན་འགྲུལ་ཆུང་ཀུའི་མཐུན་རྐྱེན་འགྲུབ་ནི་དང་ ལག་ཤེསཔ་གི་ཐོན་དངོས་ཚུ་ཚོང་འབྲེལ་འཐབསྟེ འཚོ་ཐབས་ཀྱི་གོ་སྐབས་ཚུ་ཡར་འཕར་གཏང་ནི་ལ་སོགས་པ་ཚུ་ཨིན་མས། ༼མི་སྡེ་སྲུང་སྐྱོབ། ༢༠༠༣།༽</big>[http://www.socialprotection org Social Protection]<br>
+ལས་ཁུངས་འདི་གི་བར་ཞུགས་དེ་ཡང་ གལ་ཆེ་བའི་གཞི་དོན་བཞི་གི་ནང་ལུ་དབྱེ་སྟེ་ཡོདཔ་ཨིན་མས། དེ་ཡང་ དང་པ་ རང་ཉིད་རོགས་རམ་སྡེ་ཚན་ལས་བརྟེན་ཏེ་ ལྕོགས་གྲུབ་སྒྲིང་སྒྲི་བཟོ་ནི་དང་གོ་རྟོགས་ཡར་འཕར་བཏང་སྟེ་མི་སྡེ་མཁོ་སྒྲུབ་འབད་ནི་དང་ མི་སྡེ་དང་སློབ་གྲྭ་ནང་ལུ་ཁས་བླངས་འབད་མི་ཡར་སེང་རྐྱབ་ནི་ཨིནམ་དང་། གཉིས་པ་ སྡོད་ཁྱིམ་ལེགས་བཅོས་འབད་ནིའི་ཞབས་ཏོག་ཕུལ་ནི། གཟུགས་ཁམས་ལུ་མཐུན་རྐྱེན་སྦྱར་ནི་དང་། གཞི་རྟེན་གྱི་ཆུ་དང་གཙང་སྦྲའི་མཁོ་ཆས་ཀྱི་ཞབས་ཏོག་ལས་རྟེན་ཏེ་གཞི་རྟེན་གྱི་དགོས་མཁོ་ཅན་ཚུ་རྒྱ་སྐྱེད་གཏང་ནི་ཚུཨིན་མས། གསུམ་པ་ འོས་འབབ་ཡོད་པའི་སློབ་ཕྲུག་ལྷག་པར་དུ་སློབ་ཕྲུག་བུམོ་ཚུ་ ཡོན་ཏན་ལྷབ་སྦྱང་འབད་ནི་ལུ་གྲོགས་རམ་འབད་ནི་དང་གོ་སྐབས་ཡར་རྒྱས་གཏང་ནི་ཚུ་ཨིན་མས། དེ་ལས་ བཞི་པ་ལུ་ འོང་འབབ་བཟོ་བའི་ལཱ་དང་ཚོང་ལཱ་ཆུང་ཀུ་གཞི་བཙུགས་འབད་ཐབས་ལུ་སྐྱིན་འགྲུལ་ཆུང་ཀུའི་མཐུན་རྐྱེན་འགྲུབ་ནི་དང་ ལག་ཤེསཔ་གི་ཐོན་དངོས་ཚུ་ཚོང་འབྲེལ་འཐབསྟེ འཚོ་ཐབས་ཀྱི་གོ་སྐབས་ཚུ་ཡར་འཕར་གཏང་ནི་ལ་སོགས་པ་ཚུ་ཨིན་མས། ༼མི་སྡེ་སྲུང་སྐྱོབ། ༢༠༠༣།༽</big>[http://www.socialprotection.org Social Protection]<br>
 <big>ལས་ཁུངས་འདི་གི་དམིགས་དོན་ ཡང་ སེམས་ཀྱི་གདིང་ལས་ཞབས་ཏོག་ཞུ་ནི་ཨིནམ་དང་། འབྲུག་རྒྱལ་ཁབ་འདི་ཉམས་དགའ་ཏོག་ཏོ་དང་ཕུན་སུམ་ཚོགས་ཏོག་ཏོ་སྦེ་བཟོ་ནིའི་འཆར་གཞི་ཡོདཔ་ཨིན་མས། དེ་བཟུམ་སྦེ་ རྒྱལ་ཁབ་ནང་གི་ཉེན་ཁ་ཡོད་པའི་མི་སྡེ་ཚུ་གི་མི་ཚེ་ལེགས་བཅོས་འབད་ནིའི་དོན་ལུ་གོ་སྐབས་ཚུ་བྱིན་ཏེ་ རྒྱལ་ཁབ་ནང་གི་མི་སེར་ཚུ་གི་བར་ན་མཐུན་ཏོག་ཏོ་དང་དགའ་སྐྱིད་ཡར་འཕར་གཏང་ནིའི་ནང་ལུ་ ཡིད་ཆེས་བསྐྱེད་དོ་ཡོདཔ་ཨིན་མས། མི་སྡེ་གི་མི་སེར་ཚུ་གི་རྒྱུད་ལུ་ གཅིག་སྒྲིལ་གྱི་རིག་རྩལ་གསརཔ་སྦྱང་ནི་ལུ་གྲོགས་རམ་མཛད་དེ་ ལས་ཁུངས་འདི་གིས་ གཅིག་གིས་གཅིག་ལུ་ཞབས་ཏོག་ཞུ་ནི་དང་རང་ལུ་དབང་ཆ་བྱིན་ནི་ལ་སོགས་པ་ཚུ་ཡར་རྒྱས་གཏང་ནིའི་དམིགས་ཡུལ་བསྐྱེད་དོ་ཡོདཔ་ཨིན་མས། ༼ཏཱ་ར་ཡ་ན་གཞི་ཚོགས།༽</big> [http://www.tarayanafoundation.org Tarayana Foundation]<br>
 <big>ཏཱ་ར་ཡ་ན་གཞི་ཚོགས་ཀྱིས་ཕྱག་ལཱ་ག་ཅི་བཟུམ་ར་མཛདཔ་སྨོ་ཟེར་བ་ཅིན་ རྒྱལ་ཁབ་ཀྱི་མཐའ་ཟུར་གྱི་གཡུས་ཚན་ནང་ལུ་ མི་སྡེ་གོང་འཕེལ་གྱི་ནང་ མཁོ་ཆེ་བའི་ ཞབས་ཏོག་ཚུ་ཞུ་དོ་ཡོདཔ་ཨིན་མས། དེ་མ་ཚད་ རྒྱལ་ཡོངས་གསར་གཏོད་དང་ས་གནས་ཀྱི་མི་མང་ལུ་དགོས་མཁོའི་ཁྱད་པར་གྱི་བར་ན་ ཟམ་བཟུམ་ཅིག་སྦེ་ཕྱག་ཞུ་དོ་ཡོདཔ་ཨིན་མས། མི་སྡེའི་མི་སེར་ཚུ་གི་གྲོས་འཆར་ཚུ་ལུ་གཙོ་བོར་བཟུང་སྟེ་ གཡུས་ཚན་ནང་ལུ་གྲུབ་འབྲས་བསྒྱུར་བཅོས་འབད་ཐབས་ལུ་ མི་སྡེའི་མཁོ་སྒྲུབ་དང་ལྕོགས་གྲུབ་བཟོ་ནི། དེ་ལས་ དབང་ཆ་བྱིན་ནི་ལུ་དམིགས་གཏད་བསྐྱེད་དོ་ཡོདཔ་ཨིན་མས། ང་བཅས་རའི་མི་སྡེ་གི་སའི་བཀོད་པ་ལཱ་ཁག་དང་ཁ་གཏོར་བའི་རང་བཞིན་གནས་སྟངས་ལས་བརྟེན་ མི་སྡེ་མང་རབས་ཅིག་གི་ནང་ལུ་མི་སྡེའི་ཞབས་ཏོག་དང་ཚོང་ལམ་གྱི་གོ་སྐབས་སྤྱོད་ནིའི་ནང་ལུ་ གནམ་མེད་ས་མེད་གདོང་ལེན་འབྱུང་དོ་ཡོདཔ་དང་། ལྷག་པར་དུ་ མཐའ་ཟུར་གྱི་གཡུས་ཚན་ཚུ་ནང་གོང་འཕེལ་གྱི་མཐུན་རྐྱེན་ཚུ་ ལྷོད་ནི་ལུ་ཡང་གདོང་ལེན་འབྱུང་དོ་ཡོདཔ་ཨིན་མས། དེ་འབདཝ་ལས་ ལས་ཁུངས་འདི་གིས་ སྤྱིར་བཏང་མི་སེར་གོང་འཕེལ་ལུ་གཙོ་བོར་བཏོན་ཏེ་ མཐའ་ཟུར་གྱི་མི་སྡེ་ཆུང་ཀུ་ཚུ་ལུ་ཕྱག་ལེགས་ཤེམ་སྦེ་ཞུ་ཚུགས་ཏེ་ཡོདཔ་ཨིན་མས། ལས་ཁུངས་འདི་གི་མཐའ་ཟུར་གྱི་མི་སེར་ཚུ་གཙོ་བོ་གཞུང་གི་གོང་འཕེལ་ཐབས་ཤེས་དང་ འོང་འབབ་བཟོ་ནིའི་ལས་སྣ་ཚུ་ཡར་འཕར་བཏང་སྟེ་ མཐའ་ཟུར་གྱི་འཚོ་བའི་མཐུན་རྐྱེན་ཚུ་ཡར་དྲག་བཟོ་ནི་ལུ་བརྩོན་ཤུགས་བསྐྱོད་དོ་ཡོདཔ་ཨིན་མས། ༼ཏཱ་ར་ཡ་ན་གཞི་ཚོགས།༽</big> [http://www.tarayanafoundation.org Tarayana Foundation]
 
