--- a/Bulbophyllum_sillenianum.mw
+++ b/Bulbophyllum_sillenianum.mw
@@ -1,5 +1,6 @@
 '''Bulbophyllum sillenianum'''་[[སྔོ་ཤིང་།]]་ཨིན།
 * [[ཨོ་ལ་ཚལ།]]([[Bulbophyllum]])
 * རྒྱལ་ཁབ། [[མེ་མར་]]
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
 
 [[Category:ཨོ་ལ་ཚལ།]]
