/* འབྲེལ་མཐུད། */Added content

--- a/འབྲུག་ཙན་དན་.mw
+++ b/འབྲུག་ཙན་དན་.mw
@@ -34,5 +34,6 @@
 
 == འབྲེལ་མཐུད། ==
 * http://www.un.int/wcm/content/site/bhutan/pid/7054
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
 
 [[Category:འབྲུག་ཡུལ་]]
