--- a/ཁ་ཆེའི་ཆོས་ལུགས.mw
+++ b/ཁ་ཆེའི་ཆོས་ལུགས.mw
@@ -1,5 +1,5 @@
 ཁ་ཆེའི་ཆོས་ལུགས་དེ་ཁྱད་མཚར་ཞིག་རེད
-
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
 {{translate}}
 {{stub}}
 
