/* ཁུངས་གཏུག། */Added content

--- a/ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གནས།.mw
+++ b/ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གནས།.mw
@@ -12,3 +12,4 @@
 === ཁུངས་གཏུག། ===
 # སྐྱབས་རྗེ་ཁྲི་རབས་ ༦༩ པ་དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) ལྷོ་འབྲུག་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན།
 # ལྕགས་རི་རྡོ་རྗེ་གདན། (༡༠༡༢)
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
