--- a/རྟ་མགོ།.mw
+++ b/རྟ་མགོ།.mw
@@ -30,7 +30,7 @@
 
 རྟ་མགོ་ལུ་ དུས་ཆེན་གཙོ་བོ་ ༡༩༦༧ ལུ་ [[གཞི་བཙུགས་འབད་ཡོདཔ་པའི་]] དབྱར་གནས་དེ་ ཨིནམ་དང་ དེ་ཡང་ རང་ཟླ་དྲུག་པའི་ ཚེས་ ༡༥ ལས་ རང་ཟླ་བདུན་པའི་ གནམ་སྒང་ཚུན་ཚོད་གནང་སྲོལ་ཡོདཔ་ཨིན།
 
-
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
 
 
 
