/* ཁུངས་གཏུག། */Added content

--- a/རྟ་མགོ་ཆོས་དབྱིངས་ཕོ་བྲང་།.mw
+++ b/རྟ་མགོ་ཆོས་དབྱིངས་ཕོ་བྲང་།.mw
@@ -7,3 +7,4 @@
 === ཁུངས་གཏུག། ===
 # རྟ་མགོ་འཛིན་གྲྭ་དགུ་པའི་སློབ་ཕྲུག་ཐེངས་ ༡༧ པ་ཡོངས། (༢༠༡༤)བཤད་སྒྲུབ་ཆོས་ཀྱི་འབྱུང་གནས་རྟ་མགོ་ཆོས་དབྱིངས་རྫོང་གི་གནས་ཀྱི་ལམ་སྟོན་བསྡུས་པ་བཞུགས་སོ།།
 # རྟ་མགོ་འཛིན་གྲྭ་དགུ་པའི་སློབ་ཕྲུག་ཐེངས་ ༡༧ པ་ཡོངས།. (༢༠༡༤). བཤད་སྒྲུབ་ཆོས་ཀྱི་འབྱུང་གནས།.
+# [https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
