/* འབྲེལ་མཐུད */Added content

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -92,7 +92,8 @@
 
 
 == འབྲེལ་མཐུད ==
-* ''འབྲུག་'' ( [https://web.archive.org/web/20130509082542/http://www.bhutan2008.bt/dz/node/675 རྫོང་ཁ] - [https://web.archive.org/web/20131106111027/http://www.bhutan2008.bt/en ཨིང་ལིཤ] )
+* ''འབྲུག་'' ( [https://web.archive.org/web/20130509082542/http://www.bhutan2008.bt/dz/node/675 རྫོང་ཁ] - [https://web.archive.org/web/20131106111027/http://www.bhutan2008.bt/en ཨིང་ལིཤ]
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin])
 
 == འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྲིད་བློན་གྱི་མཚན་ལ་བོད་ཡིག་མི་འབྲི་བར་དབྱིན་ཡིག་བྲི་དོན་ཅི། ==
 
