/* ཁུངས་གཏུག། */Added content

--- a/རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས།.mw
+++ b/རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས།.mw
@@ -170,3 +170,4 @@
 # GNH Centre Bhutan. (2020). About GNH Centre. Retrieved from Promoting GNH: http://www.gnhcentrebhutan.org
 # GNH Centre Bhutan. (2021, 10 26). About GNH. Retrieved from Youth Learn GNH Values through Farming Activities: http://www.gnhcentrebhutan.org
 # GNH Centre Bhutan. (2021). About GNH centre. Retrieved from About GNH Center : http://www.gnhcentrebhutan.org
+#[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
