/* ཕྱི་ཕྱོགས་དྲ་མཐུད། */Added content

--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -84,7 +84,7 @@
 *Herbert Bruce Hannah 1996 [http://books.google.com/books?id=E6uk2CT0BpsC&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''A Grammar of the Tibetan Language: Literary and Colloquial (with Copious Illustrations and Treating Fully of Spelling, Pronunciation and the Construction of the Verb and Including Appendices of the Various Forms of the Verb)''] Motilal Banarsidass Publ.
 *H. A. Jäschke 2003 [http://books.google.com/books?id=cFTVmipjOC0C&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Courier Dover Publications
 *H. A. Jäschke 2004 [http://books.google.com/books?id=POgoZBYrbfEC&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Routledge
-
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
 
 {{translate}}
 
