/* ཁུངས་གཏུག། */Add content

--- a/ངན་ལྷད་ཀྱི་སྐོར།.mw
+++ b/ངན་ལྷད་ཀྱི་སྐོར།.mw
@@ -13,3 +13,4 @@
 # https://www.transparency.org/files/content/corruptionqas
 # IntechOpen. (2018, 02 21). What causes corruption. Retrieved 10 31, 2021, from Corruption, causes and consequences: https://www.intechopen.com/chapters/58969
 # Transparancy Internatioinal. (n.d.). Corruption. Retrieved 11 1, 2021, from What is corruption?: https://www.transparency.org/en/what-is-corruption
+#[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
