*Empty MediaWiki Message*

--- a/འཇིགས་མེད་སེངྒེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ག།.mw
+++ b/འཇིགས་མེད་སེངྒེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ག།.mw
@@ -1,3 +1,4 @@
+=== འཇིགས་མེད་སེངྒེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ག། ===
 <big>༉ ཧེ་མ་རི་ནག་པོ་རྒྱལ་ཡོངས་གླིང་ག་ཟེར་མི་ འཇིགས་མེད་སེངྒེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ག་འདི་ ས་ཆ་རྒྱ་ཚད་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༡༧༣༠ གི་ནང་ལུ་ཡོདཔ་ཨིན། འདི་གིས་རི་ནག་པོ་དང་ཧི་མ་ལ་ཡ་གི་རི་རྒྱུད་ཚུ་སྲུང་སྐྱོབ་འབདཝ་ཨིན། གླིང་ག་འདི་ནང་ལུ་ གྲོང་གསར་རྫོང་ཁག་གི་ས་གནས་མང་ཤོས་ཅིག་དང་ གསར་སྤང་དང་རྩེ་རང་ དབང་འདུས་ཕོ་བྲང་ གཞལམ་སྒང་གི་ས་གནས་ལ་ཅིག་ཚུདཔ་ཨིན།  གླིང་ག་འདི་གི་ཤར་ཕྱོགསས་ལུ་ མང་སྡེ་ཆུ་ཡོདཔ་དང་ ནུབ་ཁ་ཐུག་ལུ་སོན་ཀོཤ་དང་སྤུ་ན་གཙང་ཆུ་ཚུ་ཡོདཔ་ཨིན། དེ་ལས་ ཤར་ལྷོ་ཁ་ཐུག་ལུ་ རྒྱལ་ཡོངས་མ་ནཱསི་གླིང་ག་འདི་ཡོདཔ་ཨིན།<br>
 གླིང་ག་འདི་གི་ནུབ་དང་ཤར་ལྷོ་ཁ་ཐུག་ལུ་ ཤར་ནུབ་ཀྱི་གཞུང་ལམ་དང་བྱང་ལྷོ་གི་གཞུང་ལམ་ཚུ་ཡོདཔ་ཨིན་པས། གླིང་ག་འདི་ རྒྱལ་ཁབ་ཀྱི་ཤར་ལྷོ་དང་དབུས་ཕྱོགས་ཀྱི་གླིང་ག་ཚུ་དང་ཡང་ས་མཚམས་མཐུད་དེ་ཡོདཔ་ཨིན། གླིང་ག་འདི་གི་ས་གནས་ཚུ་ནང་ལུ་ གཙོ་བོ་ཤིང་འདབ་མ་སྦོམ་གྱི་རིགས་ཚུ་ཡོདཔ་ཨིན།<br>
 === བདག་སྐྱོང་། ===
