/* གཟེངས་བསྟོད། */

--- a/བློ་གྲོས་ཚེ་རིང་།.mw
+++ b/བློ་གྲོས་ཚེ་རིང་།.mw
@@ -11,10 +11,10 @@
 === བློན་ཆེན་གྱི་གོ་གནས་བཞེས་ཡོད་པའི་སྐོར། ===
 <big>ཁོ་གིས་ སྤྱི་ལོ་ ༢༠༡༨ སྤྱི་ཟླ་ ༡༡ པའི་སྤྱི་ཚེས་ ༧ ལུ་ བཙག་འཐུ་ལས་གྲུབ་པའི་བློན་ཆེན་གསུམ་པའི་ཁྲི་ཐོག་ལུ་བྱོན་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༢༠༡༨ སྤྱི་ཟླ་ ༡༨ པའི་སྤྱི་ཚེས་ ༢༧ ལུ་ རྒྱ་གར་རྒྱལ་ཁབ་ནང་ཉིན་གྲངས་གསུམ་གྱི་ལྟ་སྐོར་ལུ་བྱོན་ཡོདཔ་དང་ སྤྱི་ལོ་ ༢༠༡༩ སྤྱི་ཟླ་ ༤ པའི་སྤྱི་ཚེས་ ༡༣ ལུ་དང་ སྤྱི་ལོ་ ༢༠༢༡ སྤྱི་ཟླ་ ༣ པའི་སྤྱི་ཚེས་ ༢༤ ལུ་ བྷང་ལ་དེཤ་ལུ་གཞུང་འབྲེལ་གཟིགས་སྐོར་དང་ བྷང་ལ་དེཤ་གིརྒྱལ་ཁབ་རང་དབང་ཐོབ་སྟེ་མི་ལོ་ ༥༠ འཁོར་བའི་དུས་སྟོན་ནང་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་གི་སྐུ་ཚབས་སྦེ་བྱོན་ཡོདཔ་ཨིན།</big>
 === གཟེངས་བསྟོད། ===
-* སྤྱི་ལོ་ ༡༩༩༡ ལུ་ ཤེས་རབ་རྩེ་མཐོ་རིམ་སློབ་གྲྭ་ལས་ ཝི་ལི་ཡམ་མེ་ཀི་ (Father William Mackey) གི་ཤེས་ཡོན་དྲག་ཤོས་ཀྱི་གསེར་གྱི་རྟགས་མ་ཐོབ་ནུག།
+<big>* སྤྱི་ལོ་ ༡༩༩༡ ལུ་ ཤེས་རབ་རྩེ་མཐོ་རིམ་སློབ་གྲྭ་ལས་ ཝི་ལི་ཡམ་མེ་ཀི་ (Father William Mackey) གི་ཤེས་ཡོན་དྲག་ཤོས་ཀྱི་གསེར་གྱི་རྟགས་མ་ཐོབ་ནུག།
 * སྤྱི་ལོ་ ༢༠༠༥ ལུ་ ཏཱ་ལའི་བླ་མ་སྐུ་ཕྲེང་ ༡༤ པ་མཆོག་ལས་ “the Unsung Hero of Compassion”  ཟེར་མི་གཟེངས་རྟགས་འདི་ཐོབ་ནུག།
 * སྤྱི་ལོ་ ༢༠༡༧ ལུ་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་གི་ཞབས་ལས་ འབྲུག་ཐུགས་སྲས་ཀྱི་རྟགས་མ་ཐོབ་ནུག།
-* སྤྱི་ལོ་ ༢༠༢༠ ལུ་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེའི་ཞབས་ལས་ ན་བཟའ་ལུང་དམརམོ་གི་གཟེངས་བསྟོད་ཐོབ་ནུག།
+* སྤྱི་ལོ་ ༢༠༢༠ ལུ་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེའི་ཞབས་ལས་ ན་བཟའ་ལུང་དམརམོ་གི་གཟེངས་བསྟོད་ཐོབ་ནུག།</big>
 
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Lotay Tshering. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lotay_Tshering&oldid=1062701014
