--- a/ནང་ཆོས།.mw
+++ b/ནང་ཆོས།.mw
@@ -207,6 +207,15 @@
 དེ་ལས་ ཡུམ་སྲས་འཁོར་དང་བཅསཔ་ གྲོང་ཁྱེར་སེར་སྐྱ་ལུ་ལོག་ཏེ་འབྱོནམ་ད་ ཡབ་ཁོ་ར་གིས་སྲས་ཀྱི་མཚན་ཡང་ དོན་ཀུན་གྲུབ་པ་ཟེར་གསོལ་ནུག།   མཚན་དེ་སྦེ་གསོལ་དགོ་མི་འདི་ཡང་ ཡབ་ཟས་གཙང་ལུ་སྲས་མེད་པར་ ཐུགས་བརྡུངས་ཏེ་བཞུགས་པའི་སྐབས་ལུ་ སྲས་གཅིག་འཁྲུངསམ་ལས་ ཁོ་གི་བསམ་པའི་དོན་ག་ར་འགྲུབ་ནི་འདི་གིས་ཨིན་མས། དེ་ལས་ ཞག་བདུན་ལངམ་ད་ ཡུམ་གཤགས་སོ་ནུག།  ཨིན་རུང་ ཡུམ་གྱི་ནུམོ་སྐྱེ་རྒུའི་བདག་མོ་ཟེར་མི་འདི་གིས་ ཡུམ་གྱི་སྐུ་ཚབ་མཛད་ཞིནམ་ལས་ རྒྱལ་སྲས་མཆོག་བདག་འཛིན་མཛད་གནང་ནུག།
 </big>
                       
+=== སྟོན་པ་སངས་རྒྱས་བཅོམ་ལྡན་འདས་ཀྱི་མཛད་རྣམ། ===
+==== བཙུན་མོ་འཁོར་གྱིས་རོལ་བའི་མཛད་པ། ====
+<big>རྒྱལ་སྲས་དོན་ཀུན་གྲུབ་པ་གིས་ ཡོན་ཏན་ལུ་མཁས་པའི་མཁས་ལུགས་དང་ སྒྱུ་རྩལ་ལུ་མཁས་པའི་མཁས་ལུགས་ཚུ་ འཇིག་རྟེན་པ་ཚུ་གི་མཐོང་སྣང་ལུ་སྟོན་པའི་ཤུལ་ལས་ རྒྱལ་སྲས་མཆོག་གིས་ ཁོ་རའི་ཡབ་ཀྱི་ཐུགས་མ་ཕམ་ཅིག་དང་ ཁོ་རའི་རེ་འདོད་གྲུབ་ཅིག་སྦེ་ ས་མཚོ་མ་དང་གྲགས་འཛིན་མ། རིགས་དྭགས་སྐྱེས་ཟེར་མི་བཙུནམོ་གསུམ་གྱི་འཁོར་དུ་ ཉི་ཁྲི་རེ་བརྩིས་ཏེ་ བཙུནམོ་བསྡོམས་དྲུག་ཁྲི་ཁབ་ཏུ་བཞེས་པའི་ཚུལ་སྟོན་ཏེ་ དོན་ཡོན་གྱི་ལོངས་སྤྱོད་ལུ་སྤྱད་དེ་ འཇིག་རྟེན་ཕལ་པའི་རྣམ་པ་སྟོན་གནངསྟེ་ རྒྱལ་སྲས་མཆོག་ དགུང་ལོ་ཉེར་དགུ་མ་ལངསམ་ཅིག་ཚུན་ རྒྱལ་སྲིད་སྐྱོང་སྟེ་བཞུགས་གནང་ནུག།
+</big>
+=== སྟོན་པ་སངས་རྒྱས་བཅོམ་ལྡན་འདས་ཀྱི་མཛད་རྣམ། ===
+==== གཞོན་ནུའི་རོལ་རྩེད་ཀྱི་མཛད་པ། ====
+<big>དེ་ལས་ རྒྱལ་སྲས་དོན་གྲུབ་མཆོག་གིས་ སྐུ་ཡོན་གྱི་ཐུགས་ཚ་གྱང་སྦོམ་བཞེས་ཏེ་ རྒྱལ་སྲས་རང་དང་མཉམ་པའི་ཨ་ལུ་ཆ་རོགས་ཁྲི་དང་ ལྷག་པར་དུ་ གཞན་དང་མ་འདྲ་བའི་རིག་པ་ཅན་གྱི་ཨ་ལུ་ཚུ་དང་གཅིག་ཁར་ འབྲི་ལྷག་གི་ཡོན་ཏན་དང་ ཡིག་གཟུགས་འབྲི་ཐངས། དེའི་ནང་ལས་ཡང་ ཁྱད་པར་དུ་ ཡི་གུ་གསེར་གྱིས་འབྲི་ཐངས་ཚུ་ལྷབ་པར་ སློབ་དཔོན་ཀུན་གྱི་བཤེས་གཉེན་ཟེར་མི་ཅིག་བཞུགས་སར་བྱོན་ནུག། དེའི་ཚེ་ སློབ་དཔོན་ཀུན་གྱི་བཤེས་གཉེན་གྱིས་ དཔེ་ཆ་ག་ཅི་སྟོནམ་ཅིག་ ཡིག་གཟུགས་མ་འདྲཝ་ལྔ་བརྒྱ་ལྷག་ཙམ་སྟོན་གནང་རུང་ རྒྱལ་སྲས་དོན་གྲུབ་ཀྱིས་ སློབ་དཔོན་ལུ་ འདི་ང་གིས་ཤེས། སྟོན་ནི་ཡོད་པ་ཅིན་ ང་གིས་མ་ཤེས་མི་ སོ་སོ་ཅིག་སྟོན་ཟེར་གསུངམ་ད་ སློབ་དཔོན་འདི་གིས་ འཇིག་རྟེན་འདི་ནང་ ཡོན་ཏན་འདི་བ་ལྷགཔ་གཞན་མེད། འདི་ཚུ་ ཁྱེད་ཀྱིས་ཤེས་པ་ཅིན་ མཁས་པ་ཨིན་མས་ཟེར་གསུངས་ཡོདཔ་ཨིན་མས།<br>
+དེ་མ་ཚད་ རྒྱལ་སྲས་དོན་ཀུན་གྲུབ་པ་གིས་ སློབ་དཔོན་ཀུན་གྱི་བཤེས་གཉེན་གྱིས་ཡང་ གོ་མ་མྱོངས་མི་ ལྷ་རིགས་ཀྱི་ཡི་གུ་ ཞལ་ལས་སྐྱོརཝ་ད་ སློབ་དཔོན་ཡང་ རྣམ་རྟོག་ལངས་ཏེ་ ཁ་ལས་དོན་ཀུན་གྲུབ་པ་ཁྱེད་ལས་མཁས་པ་གཞན་ཡོད་ག་ཟེར་ཐོན་ཡར་སོ་ནུག།<br>
+འདི་བཟུམ་མའི་མཁས་པ་གི་རྟགས་ སློབ་དཔོན་གཅིག་གི་གདོང་ཁར་སྟོན་པའི་གཏམ་དང་སྙན་གྲགས་འདི་ འཇིག་རྟེན་འདི་ནང་མ་ཚད་ ལྷ་དང་ཀླུའི་ཡུལ་ལུ་ཡང་ཁྱབ་སོ་ནུག། དེ་ལས་ རྒྱལ་སྲས་དོན་ཀུན་གྲུབ་པ་གིས་ ཕོ་དཔའ་རྩལ་དང་ལྡན་པའི་མཉམ་རོགས་ཚུ་དང་གཅིག་ཁར་ མདའ་གི་འགྲན་བསྡུར་དང་མཆོང་ནི། དཔལ་རྟགས་ཀྱི་རིག་རྩལ་ལ་སོགས་པའི་སྒྱུ་རྩལ་གྱི་འགྲན་བསྡུར་ག་ཅི་ནང་ཡང་ རྒྱལ་ཁ་འཐོབ་མི་རྒྱལ་སྲས་དོན་གྲུབ་པ་མ་གཏོགས་ གཞན་མེད་ནི་འདི་གིས་ རིག་རྩལ་ཅན་གྱི་དཔའ་བོ་ཅིག་སྦེ་ ཆ་བཞག་ཚུགས་པའི་རྒྱལ་པོའི་སྲས་ཅིག་ཨིན་པས།</big>
 === ཁུངས་གཏུག། ===
 # དྭགས་གས་པོ་ལྷ་རྗེ་བསོད་ནམས་རིན་ཆེན། དེབ་གཟུགས་པར་ཐེངས་དང་པ། སྤྱི་ལོ་ ༢༠༠༥ ལུ། 
 # དཔེ་དེབ་ཀྱི་མིང་། དམ་ཆོས་ཡིད་བཞིན་ནོར་བུ་ཐར་པ་རིན་པོ་ཆེའི་རྒྱན། 
